Updated by task 'AutomatedMDTask_1644949863560_TM-MT_1644949888593'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/281809108c987ae9ba176a3da66185435f7cdd70

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-01-13-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-01-13-21.md
@@ -1,26 +1,26 @@
 ---
-title: Versionsinformation om Dynamic Media Viewer (5.12.1)
-description: Versionsinformation om Dynamic Media Viewer (5.12.1)
+title: Versionsinformation om Dynamic Media Viewer (5.15.3)
+description: Versionsinformation för visningsprogram för Adobe Dynamic Media.
 solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
-exl-id: d6db62d2-d780-48d6-bfa0-40fc4abd9a60
+exl-id: 00a1069f-8cfe-41b4-aecd-33c2b6f9bcca
 source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '603'
+source-wordcount: '626'
 ht-degree: 0%
 
 ---
 
-# Versionsinformation för visningsprogram (5.12.1){#viewers-release-notes}
+# Versionsinformation för visningsprogram (5.15.3){#viewers-release-notes}
 
-## Adobe [!DNL Dynamic Media] Tittare {#section-5460f4e254d44c5a95196e6cb657b7e4}
+<!-- Updated January 13, 2021 for the 5.15.3 release-->
 
-## Visningsprogram som ingår {#section-cd5bb5a6b81d4e0a8250f021a0583915}
+## Adobe Dynamic Media Viewers {#section-5460f4e254d44c5a95196e6cb657b7e4}
 
 Paketet innehåller följande:
 
-* HTML5-visningsprogram
+* **HTML5-visningsprogram**
 
    * BasicZoomViewer
    * eCatalogViewer
@@ -31,7 +31,18 @@ Paketet innehåller följande:
    * VideoViewer
    * ZoomViewer
 
-* HTML5-visningsprogram endast för mobiler (äldre, med 2.4 s7sdk)
+* **Adobe Experience Manager Dynamic Media Viewers**
+
+   * CarouselViewer
+   * DimensionalViewer
+   * InteractiveImage
+   * InteractiveVideoViewer
+   * PanoramavyViewer
+   * SmartCropVideoViewer
+   * Video360Viewer
+   * ZoomVerticalViewer
+
+* **HTML5-visningsprogram endast för mobiler** (äldre, använda 3.10 s7sdk)
 
    * basicZoomMobile
    * utfällbar
@@ -39,25 +50,26 @@ Paketet innehåller följande:
    * genericZoomMobile
    * mixMedia
 
-* Adobe Experience Manager [!DNL Dynamic Media] Tittare
+## Ny förbättring i 5.15.3 {#new-features-and-enhancements-5-15-3}
 
-   * CarouselViewer
-   * InteractiveImage
-   * InteractiveVideoViewer
-   * PanoramavyViewer
-   * ZoomVerticalViewer
-   * Video360Viewer
+* Ett XSS-problem i tidigare HTML 5-visningsprogram för mobila enheter har korrigerats genom att SDK-versionen uppdaterades till 3.10. De nya färdiga HTML 5-visningsprogrammen som används av Dynamic Media påverkades inte av detta XSS-problem, så de uppdaterades inte.
 
-## Nya funktioner och förbättringar i 5.12.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
+## Ny förbättring i 5.15.2 {#new-features-and-enhancements-5-15-2}
 
-* Ett nytt visningsprogram med stöd för video 360-innehåll har lagts till.
+* Fast stöd för inbyggt videouppspelningsgränssnitt på iOS.
 
-## Felkorrigeringar för 5.12.1 {#section-50e7ea1e01dd4e1fa9c8b3e00eb002b4}
+## Nya funktioner och förbättringar i 5.15.1 {#new-features-and-enhancements-5-15-1}
 
-* Korrigerade felaktiga långtidsskärmar.
-* Löste problem med helskärmsläge där sidan rullades på Apple-enheter (som körs på iOS 12 och senare).
+* Stöd för passiva händelseavlyssnare har lagts till.
+* 3D-återgivningsbiblioteket i DimensionalViewer har uppdaterats för att ge bättre stöd för modellfärgning.
+* Inaktiverad fokusering av inaktiva knappar.
+* Förbättrad tangentbordskontroll och stöd för hjälpmedelsteknik i delningsverktygen.
+* Korrigerad rullning av färgrutor på iOS-enheter.
+* Korrigerad sidvändningseffekt på iOS-enheter i eCatalog-visningsprogram.
+* Korrigerat `swatchoverlay` modifierarbeteende i visningsprogram med färgrutor på pekenheter.
+* Korrigerat stöd för videobeskrivningar i MixedMediaViewer i fall där videon inte kommer först i medieuppsättningen.
 
-## Kända fel och begränsningar för 5.12.1 {#section-af67bc1734844f31a89a09004b558c6e}
+## Kända fel och begränsningar {#known-issues-and-restrictions}
 
 * Funktionsändringstangenterna för bildservrar från IS läggs inte till i `req=set` förfrågan efter design. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
 
@@ -66,18 +78,13 @@ Paketet innehåller följande:
 * Skalning av webbläsarfönstret leder till felaktig storleksändring.
 * iPad 2 - Stora e-katalogresurser kraschar Safari på iOS.
 
-**Alla visningsprogram**
+### Alla visningsprogram {#all-viewers}
 
 * Vattenstämplar, förvrängning och låsning stöds inte.
 * Bildförinställningar stöds inte.
 * Lägga till eller ta bort visningsprogram från DOM med `display:none` CSS eller genom att dynamiskt koppla loss den från den överordnade noden stöds inte.
-* Om du bäddar in ett visningsprogram i en tabell kan visningsprogrammets storlek eller placering bli felaktig i icke-ursprungligt helskärmsläge. Adobe rekommenderar att du använder DIV i stället.
-* Parametrar med explicita instansnamn i koden kräver att instansnamn i URL:en också skrivs över (till exempel `zoomView.iconfeffect=0`).
-* Bildredigering, kommando `crop` stöds inte.
-* Knappen Stäng fungerar bara om visningsprogrammet är öppet i ett underordnat fönster.
-* IS-kommandomodifieraren stöder inte Image Serving-modifierare som påverkar bildstorleken.
 
-**HTML5 alla visningsprogram**
+### HTML5 alla visningsprogram {#html5-all-viewers}
 
 * Om du bäddar in ett visningsprogram i en tabell kan visningsprogrammets storlek eller placering bli felaktig i icke-ursprungligt helskärmsläge. Adobe rekommenderar att du använder DIV i stället.
 * Parametrar med explicita instansnamn i koden kräver att instansnamn i URL:en också skrivs över (till exempel `zoomView.iconfeffect=0`).
@@ -85,21 +92,21 @@ Paketet innehåller följande:
 * Knappen Stäng fungerar bara om visningsprogrammet är öppet i ett underordnat fönster.
 * IS-kommandomodifieraren stöder inte Image Serving-modifierare som påverkar bildstorleken.
 
-**HTML5 eCatalog**
+### HTML5 eCatalog {#html5-ecatalog}
 
 * Om du navigerar till en annan HTML-sida och sedan återgår till den andra sidan återställs visningsprogrammet till den första sidan.
 * Sidlayouten visas ibland felaktigt efter att iOS-enheten har roterats. När du zoomar in på sidan korrigeras layouten.
 * Interna länkar endast till den vänstra sidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
 
-**HTML5 blandade media**
+### HTML5 blandade media {#html5-mixed-media}
 
 * Ljudspårets uppspelning stöds inte.
 
-**HTML5 Social**
+### HTML5 Social {#html5-social}
 
 * Om du vill återge miniatyrbilder korrekt i utgående e-post väljer du `serverurl` modifierare måste ha en absolut URL.
 
-**HTML5-video**
+### HTML5-video {#html5-video}
 
 * Posterbilden kan träffa på en `max size` fel. I så fall måste du öka gränsvärdet för Image Serving Publish.
 * Videobeskrivningar kräver en företagsregeluppsättning om värdsidan för HTML hanteras från en extern server (inte en Dynamic Media-server). Kontakta teknisk support.
