--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
@@ -1,13 +1,13 @@
 ---
+title: Versionsinformation om Scene7 Viewer 5.4.2
 description: Versionsinformation om Scene7 Viewer 5.4.2
 solution: Experience Manager
-title: Versionsinformation om Scene7 Viewer 5.4.2
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: dde851f5-0766-4bd9-84b3-2600dd5f5700
-source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '820'
+source-wordcount: '817'
 ht-degree: 0%
 
 ---
@@ -16,34 +16,34 @@ ht-degree: 0%
 
 ## Adobe Scene7 Viewers {#section-5460f4e254d44c5a95196e6cb657b7e4}
 
-Visningsprogramuppgraderingar är vanligtvis bakåtkompatibla. I den här versionen har en visningsprogramändring gjorts för namnutrymmesstöd. Därför uppdaterades alla förinställningar för visningsprogram som inte är installerade så att de återspeglar den här ändringen. Om du har skapat egna förinställningar för visningsprogram kan visningsprogrammen få problem och CSS-formateringen måste uppdateras baserat på följande kända fel:
+Visningsprogrammets uppgraderingar är bakåtkompatibla. I den här versionen har en visningsprogramändring gjorts för namnutrymmesstöd. Därför uppdaterades alla förinställningar för visningsprogram som inte är installerade så att de återspeglar den här ändringen. Om du har skapat egna förinställningar för visningsprogram kan visningsprogrammen få problem och CSS-formateringen måste uppdateras baserat på följande kända fel:
 
 * Videovisningsprogram - knappen Spela upp/pausa visar inte uppspelningsläget.
 * Videovisningsprogram - Navigeringsmarkörer visas inte.
 * Visningsprogram för BasicZoom, Zoom och Spin - IconEffect visar inte eller visar SDK-standardbilder.
 * Visningsprogram för utfällbar meny och zoomning - Knappar för färgrullning visas inte för stora uppsättningar.
 
-Vi rekommenderar att du testar visningsprogram i vår staging-miljö. Följande webbplats innehåller instruktioner om hur du kan konfigurera systemet för att få åtkomst till vår mellanlagringsserver:
+Vi rekommenderar att du testar tittare i Adobe staging-miljö. Följande webbplats innehåller anvisningar om hur du konfigurerar systemet för att få åtkomst till Adobe staging-servern:
 
 [https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
 
-När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga visningsprogram bör du testa mot vår standardtestserver och s7is1-preview-staging.scene7.com.
+När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga visningsprogram bör du testa mot Adobe standardstaging-server och s7is1-preview-staging.scene7.com.
 
 ## Nya funktioner och förbättringar i 5.4.2 {#section-f55c5ff7f6d0406c8739de4981dd7195}
 
 * Viewer SDK används i ett namnutrymme.
 * Visningsprogrammets dispose()-API.
 * Stöd för Chrome-webbläsare på iOS-enheter har lagts till.
-* Stöd för webbläsaren Microsoft Edge har lagts till.
+* Stöd för webbläsaren Microsoft® Edge har lagts till.
 * Funktionen Favoriter har lagts till i eCatalog-visningsprogrammet.
-* Stöd har lagts till för att köra ett visningsprogram i behållaren som är dolt med `display:none` CSS eller som är frånkopplat från DOM.
+* Stöd för att köra ett visningsprogram i behållaren som är dolt med `display:none` CSS eller är frånkopplad från DOM.
 * Lagt till möjlighet att styra vågrät och lodrät snurrkänslighet och låsa rotationsriktningen.
 * Visningsprogrammet använder konsoliderad JavaScript-fil för SDK-begäranden.
 
 ## Felkorrigeringar för 5.4.2 {#section-c64001afa2aa460180141bc8dcd507ec}
 
 * Intermittent icke-funktionell nyp-till-zoom.
-* Helskärmsknappar fungerar inte i webbläsaren Microsoft Edge.
+* Helskärmsknappar fungerar inte i webbläsaren Microsoft® Edge.
 * Lägesattributet i den yttre behållaren återställs inte till standard när helskärmsläget har avslutats.
 * Textjusteringsegenskapen i överordnad DIV påverkar knappplaceringen i verktygsfältet.
 * Utfällbar visningsprogram: den övre vänstra rutan visas när användaren rullar musen över huvudbilden.
@@ -51,12 +51,12 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 * Det går inte att växla rader med upp/ned-gest när en snurra bara innehåller två rader.
 * Inbyggda kontroller fungerar inte.
 * Chrome blockerar uppspelning av flashproxy-video.
-* Zoomvisningsprogram och visningsprogram för blandade media: Färgrutor har en genomskinlig bakgrund i simulerat helskärmsläge
-* Visare: andra och efterföljande anrop av `init()` ska ignoreras.
+* Zoomvisningsprogram och visningsprogram för blandade media: Färgrutor har en genomskinlig bakgrund i simulerat helskärmsläge.
+* Visare: andra och efterföljande anrop till `init()` ska ignoreras.
 
 ## Kända fel och begränsningar för 5.4.2 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* Modifierare för bildservering från iscommands läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
+* Funktionsändringstangenterna för bildservering från iscommands läggs inte till i `req=set` förfrågan efter design. Modifierare som bara påverkar bildvisningen fungerar bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
 
    ```
    https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}
@@ -65,17 +65,17 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 * Flyout - Internet Explorer 9 finns ibland kvar på skärmen när musen är avstängd.
 * ZoomViewer - Det går inte att zooma en bild genom att klicka med musen (Windows 8, pekskärm, Chrome).
 * Webbläsarskalning leder till fel storleksändring.
-* iPad 2 - Big eCatalog-resurser kraschar Safari på iOS.
+* iPad 2 - Large eCatalog asset kraschar Safari på iOS.
 
 **Alla visningsprogram**
 
 * Vattenstämplar, förvrängning och låsning stöds inte.
 * Bildförinställningar stöds inte.
-* Det går inte att lägga till eller ta bort visningsprogrammet från DOM med `display:none` CSS eller genom att dynamiskt koppla loss det från den överordnade noden.
+* Lägga till eller ta bort visningsprogram från DOM med `display:none` CSS eller genom att dynamiskt koppla loss den från den överordnade noden stöds inte.
 
 **Alla visningsprogram**
 
-* Om du bäddar in visningsprogrammet i en tabell kan visningsprogrammets storlek eller placering bli felaktig i icke-ursprungligt helskärmsläge. Använd `DIV`s i stället.
+* Om du bäddar in visningsprogrammet i en tabell kan visningsprogrammets storlek eller placering bli felaktig i icke-ursprungligt helskärmsläge. Använd `DIV`s istället.
 * Parametrar med explicita instansnamn i koden kräver också att instansnamn i URL:en skrivs över. Exempel, `zoomView.iconeffect=0`.
 * Beskärning av bildserverkommando stöds inte.
 * Knappen Stäng fungerar bara om visningsprogrammet är öppet i ett underordnat fönster.
@@ -95,14 +95,14 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 
 **Social visningsprogram**
 
-* För att miniatyrerna ska kunna återges korrekt i utgående e-post måste modifieraren `serverurl` använda en absolut URL.
+* Om du vill återge miniatyrbilder korrekt i utgående e-post väljer du `serverurl` modifierare måste använda en absolut URL.
 
 **Videovisningsprogram**
 
-* Posterbilden kan ha ett fel av typen &quot;max size&quot;. Användaren kan behöva öka gränsvärdet för Image Serving Publish.
-* Bildtexter för video kräver en företagsregeluppsättning om de är värd för en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support för att få hjälp.
+* Posterbilden kan ha ett fel av typen &quot;max size&quot;. Användaren måste öka gränsvärdet för Image Serving Publish.
+* Bildtexter för videofilmer kräver en företagsregeluppsättning om de har en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support för att få hjälp.
 * Analysspårning kan rapportera fel uppspelningsprocent på grund av buffring.
-* Svart bildruta i stället för förhandsvisningsbild kan visas på iPad- eller Android-enheter.
-* Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android-enheter.
-* Svarta kantlinjer visas på sidan om VideoPlayer-komponenten när bakgrunden är inställd på vit eller genomskinlig på iPad-enheter.
-* Den sista bildrutan i en video kan förvrängas på iPad med iOS 7.
+* Svarta bildrutor i stället för förhandsvisningsbilder kan visas på iPad- eller Android™-enheter.
+* Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android™-enheter.
+* Svarta kantlinjer visas bredvid VideoPlayer-komponenten när bakgrunden är vit eller genomskinlig på iPad-enheter.
+* Den sista bildrutan i en video kan förvrängas i iPad med iOS 7.
