--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-13.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-13.md
@@ -1,13 +1,13 @@
 ---
+title: Versionsinformation om Scene7 Viewer 4.9.2
 description: Förbättringar, felkorrigeringar och kända fel i Scene7 Viewer 4.9.2
 solution: Experience Manager
-title: Versionsinformation om Scene7 Viewer 4.9.2
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: fb79049d-b135-41c4-ae63-b7b74697b956
-source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '1106'
+source-wordcount: '942'
 ht-degree: 0%
 
 ---
@@ -18,9 +18,9 @@ Förbättringar, felkorrigeringar och kända fel i Scene7 Viewer 4.9.2
 
 ## Förbättringar i Scene7 Viewer 4.9.2 {#section-0b0363fae0274737bace119f281e740f}
 
-Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i vår staging-miljö. Kontakta teknisk support för instruktioner om hur du får åtkomst till testservern så att du kan testa dina tittare. När detta är klart kan du kontrollera din webbplats för att testa uppgraderingarna.
+Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö. Kontakta teknisk support för instruktioner om hur du får åtkomst till testservern så att du kan testa dina tittare. När aktiveringen är klar kan du kontrollera webbplatsen för att testa uppgraderingarna.
 
-* Förbättrade minimikrav för visningsprogram för iOS6.
+* Ökade minimikrav för tittarna på iOS6.
 * Stöd för anpassad händelsespårning har lagts till för tittarna.
 * Stöd har lagts till för att ange den inledande bithastigheten för Video Viewer.
 * Videovisningsprogrammet använder nu som standard HLS-direktuppspelning på Safari för datorer.
@@ -46,8 +46,8 @@ Följande fel har åtgärdats:
 * Verktygstips för att visa snurra och zooma klipptes av i kanten i det inbäddade visningsprogrammet.
 * Funktionsbeskrivningen för delning via sociala medier har flyttats för knapparna i sociala medier.
 * Formatet för knappbeskrivningar för sociala medier matchar inte verktygstipsen för visningsprogrammet.
-* Verktygstips visades inte i helskärmsläge i Mac OS med Safari 5.
-* Visningsprogrammet för video hade en felaktig storlek för förloppsindikatorn när iPad roterades och skärmlägen växlades.
+* Verktygstips visades inte i helskärmsläge på macOS med Safari 5.
+* Visningsprogrammet för video hade fel storlek för förloppsindikatorn när iPad roterades och skärmlägen växlades.
 * Videovisningsprogrammet genererade konsolloggar som standard.
 
 ## Kända fel i Scene7 Viewer 4.9.2 {#section-368dd0dc138b44e28b49314e4ad0fa1a}
@@ -61,53 +61,50 @@ Följande fel har åtgärdats:
 * Parametrar med explicita instansnamn i koden måste skrivas över. instansnamn i en URL måste också skrivas över. Exempel, `zoomView.iconeffect=0`.
 * Beskärning av bildserverkommando stöds inte.
 * Knappen Stäng fungerar bara om visningsprogrammet är öppet i ett underordnat fönster.
-* Om du vill anpassa verktygstipsformatet lägger du till `!IMPORTANT` i CSS-deklarationen.
+* Om du vill anpassa verktygstipsformatet lägger du till `!IMPORTANT` till CSS-deklarationen.
 
 **eCatalog-visningsprogram**
 
 * JavaScript-mallar i bildscheman stöds inte.
 * Om du navigerar till en annan HTML-sida och sedan återgår till den första sidan återställs visningsprogrammet ibland.
-* Ange `ImageMapEffect` rollover modifier till `1` för att anropa infopanels.
+* Ange `ImageMapEffect` rollover modifier to `1` att anropa infopanels.
 
-* `Frametransition` inställd på  `none` eller  `fade` stöds inte.
+* `Frametransition` ange till `none` eller `fade` stöds inte.
 
 * Sidlayouten visas ibland felaktigt efter att iOS-enheten har roterats. Zooma in på sidan korrigerar layouten.
 
 **Visningsprogram för blandade media**
 
-* Ljudspårets uppspelning stöds inte just nu.
+* Ljudspårets uppspelning stöds inte för närvarande.
 
 **Social visningsprogram**
 
-* För att återge miniatyrbilder korrekt i utgående e-post bör modifieraren `serverurl` ha en absolut URL.
+* Om du vill återge miniatyrbilder korrekt i utgående e-post väljer du `serverurl` modifierare ska ha en absolut URL.
 
 **Videovisningsprogram**
 
-* Posterbilden kan ha felet &quot;max size&quot;. Användaren kan behöva öka gränsvärdet för Image Serving Publish.
-* Bildtexter för video kräver en företagsregeluppsättning om de är värd för en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support för att få hjälp.
+* Posterbilden kan ha felet &quot;max size&quot;. Användaren måste öka gränsvärdet för Image Serving Publish.
+* Bildtexter för videofilmer kräver en företagsregeluppsättning om de har en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support för att få hjälp.
 
 **Flash AS3-alla visningsprogram**
 
 * Dubbelkoda tecknet # i resursnamn.
-* Serverstödet kan inte läsa in SWF-animeringar med inbäddade videor.
+* Serverstödet kan inte läsa in animeringar i SWF med inbäddade videor.
 * Serverstöd kan inte läsa in visningsskal om de kompilerats för Flash Player 6. Tillfällig lösning är att kompilera för Flash Player 7.
-* Macintosh OS och Flash Player version 10,0,32,18: Tillfällig lösning är beroende av en JavaScript-brygga i stället för en LocalConnection för kommunikation mellan Flex och Flash. Därför måste Flex-programmet vara inbäddat i HTML-omslutningen.
-* För närvarande har visningsprogrammen för Flash stöd för SWF-filer som endast är kompatibla med Flash 7.
-* På grund av ett problem med Java v.1.5.0_06 stöds inte serverkomponenten med den versionen av Java. [https://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6274990](https://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6274990).
+* Macintosh OS och Flash Player version 10,0,32,18: Tillfällig lösning är beroende av en JavaScript-brygga i stället för en LocalConnection för kommunikation mellan Flex och Flash. Flex måste alltså vara inbäddat i HTML wrapper.
+* För närvarande stöder visningsprogrammen för Flash endast SWF som uppfyller kraven för Flash 7.
+* På grund av ett problem med Java™ v.1.5.0_06 stöds inte serverkomponenten i den versionen av Java™. [https://bugs.java.com/?bug_id=6274990](https://bugs.java.com/?bug_id=6274990).
 * För en skal-URL-parameter måste parametern i skal-URL vara URL-kodad.
-* Bilduppsättningar med utökade ASCII-tecken i namnet måste vara URL-kodade två gånger när de skickas till visningsprogrammet, annars misslyckas FVCTX-begäran eftersom Flash-spelaren avkodar namnet innan den skickas till visningsprogramkoden.
-* Om den inbäddade HTML-sidan har ett viktigt innehåll efter visningsprogrammet, är det möjligt att visningsprogrammet kan anropa en JavaScript-funktion innan sidan är helt inläst. Detta kan medföra att sidinläsningen avbryts. En föreslagen lösning är att använda en onLoad-händelsehanterare för att fördröja initieringen av visningsprogrammet tills sidan har lästs in.
-* Ändringarna i `S7Config.setFlashParam()` gör att mer än en parameter/värde kan skickas med denna `syntax S7Config.setFlashParam(<viewer ID>, <parameter name>, <parameter value> [, <parameter name>, <parameter value>])`, men i så fall måste den första parametern som skickas vara image-parametern följt av currentFrame-parametern (om det behövs) och sedan eventuella andra parametrar.
+* Om den inbäddade HTML-sidan har ett viktigt innehåll efter visningsprogrammet kan det hända att visningsprogrammet anropar en JavaScript-funktion innan sidan är helt inläst. Den här åtgärden kan avbryta sidinläsningen. En föreslagen lösning är att använda en onLoad-händelsehanterare för att fördröja initieringen av visningsprogrammet tills sidan har lästs in.
+* När du använder `skipFrames=frameList` parameter som utelämnar bilder, returnerar visningsprogrammet ett fel om en utelämnad bildruta anropas direkt antingen av JavaScript-funktionen för ändring av bild `InitialFrame`eller om en RenderSet som har två eller flera färgrutor associerade med en bild - när kombinationen av färgrutor som refererar till den uteslutna bildrutan är markerad.
 
-* När du använder parametern `skipFrames=frameList` för att utesluta bilder returnerar visningsprogrammet ett fel om en utelämnad bildruta anropas direkt antingen av JavaScript-funktionen för ändring av bild, `InitialFrame`, eller om en RenderSet har två eller flera färgrutor associerade med en bild, när den färgrutekombination som refererar till den utelämnade bildrutan är markerad.
+* Beskärning stöds inte med zoommål eller färgrutor i `image=` eller `modifier=` argument.
 
-* Beskärning stöds inte tillsammans med zoommål eller färgrutor i argumenten `image=` eller `modifier=`.
+* The `rgn` argument stöds inte för Flash-visningsprogram för bildmodifiering.
+* En ny IE-säkerhetsuppdatering kräver att användaren aktiverar Flash och andra ActiveX®-program i IE. På Microsoft® webbplats finns information om tillfälliga lösningar.
+* Säkerhetsproblem förhindrar att visningsprogrammet läser från en annan server på samma domän, såvida inte båda URL:erna är fullständiga domännamn eller om korsdomänsprincipen är inställd på att tillåta åtkomst från den servern.
 
-* Argumentet `rgn` stöds inte för Flash-visningsprogram för bildmodifierare.
-* En ny säkerhetspatch för IE kräver att användaren aktiverar Flash och andra ActiveX-program i IE. Information om tillfälliga lösningar finns på Microsofts webbplats.
-* Säkerhetsproblem förhindrar att visningsprogrammet läser från en annan server på samma domän, såvida inte båda URL:erna är fullständiga domännamn eller om korsdomänsprincipen är särskilt inställd för att tillåta åtkomst från den servern.
-* Med de nya säkerhetsfunktionerna i Flash 7 får användaren ett meddelande om detta och frågar om du vill tillåta detta, om tittarna försöker läsa från en annan server på den domän där de befinner sig (d.v.s. om de omdirigeras av sökvägarna i `infoServerUrl`, `searchEngineUrl` eller `serverUrl parameters`) om korsdomänsprincipen är inställd på att tillåta åtkomst från den servern.
 
    Mer information om hur du konfigurerar en korsdomänprincip finns i följande artikel: [https://kb2.adobe.com/cps/142/tn_14213.html](https://kb2.adobe.com/cps/142/tn_14213.html).
 
-* Ett undantagsfel genererades när visningsprogrammet är inbäddat på HTTPS-sidan. Problemet beror på kommunikation med serverloggning. Mer information: [https://helpx.adobe.com/flash-player/kb/flash-player-issues-secure-sockets.html](https://helpx.adobe.com/flash-player/kb/flash-player-issues-secure-sockets.html)
+* Ett undantagsfel genererades när visningsprogrammet är inbäddat på HTTPS-sidan. Problemet beror på kommunikation med serverloggning. Mer information [https://www.adobe.com/products/flashplayer/end-of-life.html](https://www.adobe.com/products/flashplayer/end-of-life.html).
