--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-17.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-17.md
@@ -1,13 +1,13 @@
 ---
+title: Versionsinformation om Scene7 Viewer 5.8.2
 description: Versionsinformation om Scene7 Viewer 5.8.2
 solution: Experience Manager
-title: Versionsinformation om Scene7 Viewer 5.8.2
-feature: Dynamic Media Classic,visningsprogram,SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 458e11b1-74f3-4a70-87c8-49cef32acf00
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '631'
+source-wordcount: '621'
 ht-degree: 0%
 
 ---
@@ -18,21 +18,21 @@ ht-degree: 0%
 
 ## Felkorrigeringar för 5.8.2 {#section-50e7ea1e01dd4e1fa9c8b3e00eb002b4}
 
-* Användaren kunde inte vända en sida med musen om `frametransition=turn`.
+* Användaren kunde inte växla sida med musen om `frametransition=turn`.
 * `ImageMapEffect.mapTips=1` musklicket genererade ett skriptfel på enheter med pekskärm.
 
 ## Nya funktioner och förbättringar i 5.8.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
 
 * Tangentbordstillgänglighet i grundläggande zoomning, utfällbar bild, blandade media, snurra, zoom, video, karusell, interaktiv bild och interaktiv video.
 * Ikonen för videobuffring har lagts till i Video Viewer, Mixed Media Viewer och Interactive Video Viewer.
-* Värdet `native` för modifieraren `playback` är föråldrat; använd det nya värdet `progressive` i stället.
+* Värdet `native` av `playback` modifieraren är inaktuell; använd det nya värdet `progressive` i stället.
 
-* Stöd för HTTP-direktuppspelning av [!DNL Dynamic Media]-video har lagts till.
+* Stöd för uppspelning av HTTPS-direktuppspelning för [!DNL Dynamic Media] video.
 * Stöd för direktuppspelad video på iPhone-enheter har lagts till.
 * Stöd för extern videouppspelning har lagts till i Video Viewer.
 * Förbättrad rullning av färgrutor på enheter med pekskärm.
 * Stöd för enheter med både mus- och pekrörelser som kör webbläsaren Internet Explorer 11 och Edge har lagts till.
-* Lagt till möjlighet att ange både vänster och höger sida med parametern `initialframe` i stående läge på mobila enheter i eCatalog-visningsprogrammet.
+* Lagt till möjlighet att ange både vänster och höger sida med `initialframe` i stående läge på mobila enheter i eCatalog-visningsprogrammet.
 
 ## Felkorrigeringar för 5.8.1 {#section-867d7f16480f43d5ac0f6e3e4d77ad80}
 
@@ -41,28 +41,28 @@ ht-degree: 0%
 
 ## Kända fel och begränsningar för 5.8.2 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* Modifierare för bildservering från IS-kommandon läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
+* Funktionsändringstangenterna för bildservrar från IS läggs inte till i `req=set` förfrågan efter design. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
 
    `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
 
 * Utfällbar visningsprogram - Internet Explorer 9 visas ibland fortfarande på skärmen när musen är avstängd.
 * Skalning av webbläsarfönstret leder till felaktig storleksändring.
-* iPad 2 - En stor eCatalog-resurs kraschar Safari på iOS.
+* iPad 2 - En stor e-katalogresurs kraschar Safari på iOS.
 
 **Alla visningsprogram**
 
 * Vattenstämplar, förvrängning och låsning stöds inte.
 * Bildförinställningar stöds inte.
-* Det går inte att lägga till eller ta bort visningsprogrammet från DOM med `display:none` CSS eller genom att dynamiskt koppla loss det från den överordnade noden.
+* Lägga till eller ta bort visningsprogram från DOM med `display:none` CSS eller genom att dynamiskt koppla loss den från den överordnade noden stöds inte.
 * Om du bäddar in ett visningsprogram i en tabell kan visningsprogrammets storlek eller placering bli felaktig i icke-ursprungligt helskärmsläge. Adobe rekommenderar att du använder DIV i stället.
 * Parametrar med explicita instansnamn i koden kräver att instansnamn i URL:en också skrivs över (till exempel `zoomView.iconfeffect=0`).
-* Bildserverkommandot `crop` stöds inte.
+* Bildredigering, kommando `crop` stöds inte.
 * Knappen Stäng fungerar bara om visningsprogrammet är öppet i ett underordnat fönster.
 * IS-kommandomodifieraren stöder inte Image Serving-modifierare som påverkar bildstorleken.
 
 **eCatalog**
 
-* Om du navigerar till en annan HTML-sida och sedan återgår till den första sidan återställs visningsprogrammet ibland.
+* Om du navigerar till en annan HTML-sida och sedan återgår till den andra sidan återställs visningsprogrammet till den första sidan.
 * Sidlayouten visas ibland felaktigt efter att iOS-enheten har roterats. När du zoomar in på sidan korrigeras layouten.
 * Interna länkar endast till den vänstra sidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
 * På grund av webbläsarbegränsningar är funktionen Skriv ut inte tillgänglig i Internet Explorer 9.
@@ -73,17 +73,17 @@ ht-degree: 0%
 
 **Social**
 
-* För att miniatyrerna ska kunna återges korrekt i utgående e-post bör modifieraren `serverurl` ha en absolut URL.
+* Om du vill återge miniatyrbilder korrekt i utgående e-post väljer du `serverurl` modifierare ska ha en absolut URL.
 
 **Video**
 
-* Det kan uppstå ett `max size`-fel i förhandsvisningsbilden. Du kan behöva öka gränsvärdet för Image Serving Publish.
-* Videobeskrivningar kräver en företagsregeluppsättning om HTML-värdsidan hanteras från en extern server (inte en Scene7-server). Kontakta teknisk support.
+* Posterbilden kan träffa på en `max size` fel. Öka gränsvärdet för Image Serving Publish.
+* Videobeskrivningar kräver en företagsregeluppsättning om värdsidan för HTML hanteras från en extern server (inte en Scene7-server). Kontakta teknisk support.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
-* På iPad- eller Android-enheter kan en svart ram visas i stället för en förhandsvisningsbild.
-* På iPad- eller Android-enheter kan en svart bildruta blinka på skärmen när visningsprogrammet läses in.
-* På iPad-enheter visas svarta kanter på sidan av VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig.
+* På iPad- eller Android™-enheter kan en svart ram visas i stället för en förhandsvisningsbild.
+* På iPad- eller Android™-enheter kan en svart bildruta blinka på skärmen under inläsningen av visningsprogrammet.
+* På iPad-enheter visas svarta kantlinjer på sidan om VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig.
 * I iPad kan den sista videobildrutan förvrängas med iOS 7.
 * I Chrome-, Firefox- och Internet Explorer-webbläsare kan det förekomma makroblockering vid videosökning i HLS-direktuppspelningsläge.
-* Affischbilden kanske inte visas i Microsoft Edge-webbläsaren för första gången.
+* Affischbilden kanske inte visas i Microsoft® Edge-webbläsaren för första gången.
 * När progressiv uppspelning används kan förhandsvisningsbilden döljas efter att videon har lästs in i Internet Explorer 9.
