--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-19-14.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-19-14.md
@@ -1,13 +1,13 @@
 ---
+title: Versionsinformation om Scene7 Viewer 5.1.1
 description: Versionsinformation om Scene7 Viewer 5.1.1
 solution: Experience Manager
-title: Versionsinformation om Scene7 Viewer 5.1.1
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 2f9b1d0a-2c89-41ed-af00-d8f3d636560c
-source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '740'
+source-wordcount: '729'
 ht-degree: 0%
 
 ---
@@ -16,43 +16,43 @@ ht-degree: 0%
 
 ## Adobe Scene7 Viewers {#section-0b0363fae0274737bace119f281e740f}
 
-Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i vår staging-miljö. Följande webbplats innehåller instruktioner om hur du kan konfigurera systemet för att få åtkomst till vår mellanlagringsserver:
+Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö. Följande webbplats innehåller anvisningar om hur du konfigurerar systemet för att få åtkomst till Adobe staging-servern:
 
 [https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
 
-När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga visningsprogram bör du testa mot vår standardtestserver och s7is1-preview-staging.scene7.com.
+När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga visningsprogram bör du testa mot Adobe standardstaging-server och s7is1-preview-staging.scene7.com.
 
 ## Nya funktioner och förbättringar {#section-405e47e202e54943bd843d82415c91cb}
 
-* Uppdaterat stöd för Internet Explorer 11
-* Ändrade visningsprogram till att använda Spåra begäranden i stället för Spåra sidor för Adobe Analytics
-* Stöd för responsiva bilder har lagts till med bildkommandon och/eller bildförinställningar som baseras på bildens bredd
-* Stöd för att skicka lokaliseringstextsträngar till JSON-argument från visningsprogram har lagts till
-* Stöd för inbyggd sidbläddring i visningsrutor har lagts till
-* Förbättrat stöd för komplexa resurser och bildmallar för tittare
-* Stöd för innehållsförteckning har lagts till i eCatalog-visningsprogrammet
-* Stöd för bildmappsövertäckningar och ikoner har lagts till i eCatalog
-* Stöd för animering av sidvändning har lagts till i eCatalog-visningsprogrammet
-* Stöd för inbyggd sidbläddring i eCatalog har lagts till
-* Utökat stöd för att visa smala bilder med hjälp av modifieraren för högdagerläge i utfällningsvisningsprogrammet
-* Utökat stöd för att styra uppskalning av bilder med zoomfaktor-modifierare i utfällningsvisningsprogrammet
-* Stöd för spårning av händelser som genererats av visningsprogrammet för utfällbara foton har lagts till
-* Stöd för bildtexter för video (endast första videon) i MixedMedia Viewer
-* Ökad ursprunglig bithastighet som standard till 1 400 för video- och MixedMedia-visningsprogram
-* Stöd för uppspelning av videoslingor i Video Viewer har lagts till
-* Stöd för navigeringskapitel har lagts till i Video Viewer
+* Uppdaterat stöd för Internet Explorer 11.
+* Ändrade visningsprogram till att använda Spåra begäranden i stället för Sid-förfrågningar för Adobe Analytics tracking.
+* Stöd för responsiva bilder har lagts till med bildkommandon och/eller bildförinställningar som baseras på bildens bredd.
+* Stöd för att skicka lokaliseringstextsträngar till JSON-argument från visningsprogram har lagts till.
+* Stöd för inbyggda sidbläddringar i visningsrutor har lagts till.
+* Förbättrat stöd för komplexa resurser och bildmallar.
+* Stöd för innehållsförteckning har lagts till i eCatalog-visningsprogrammet.
+* Stöd för övertäckningar av bildscheman och ikoner har lagts till i eCatalog.
+* Stöd för animering av sidvändning har lagts till i eCatalog-visningsprogrammet.
+* Stöd för inbyggda sidbläddringar i eCatalog har lagts till.
+* Stöd för att visa smala bilder med `highlightmode` modifierare till utfällbar visningsprogram.
+* Stöd för att styra uppskalning av bilder med `zoomfactor` modifierare till utfällbar visningsprogram.
+* Stöd för spårning av händelser som genererats av visningsprogrammet för utfällbara menyer har lagts till.
+* Stöd för bildtexter för video (endast första videon) har lagts till i MixedMedia Viewer.
+* Ökad ursprunglig bithastighet som standard till 1 400 för video- och MixedMedia-visningsprogram.
+* Stöd för uppspelning av video i loopar har lagts till i Video Viewer.
+* Stöd för navigeringskapitel har lagts till i Video Viewer.
 
 ## Felkorrigeringar {#section-83698d163c304b6fb99a98d857cd3c27}
 
-* eCatalog Viewer visar inte PageIndicator på iPhone
-* Bilder kan inte visas om Image Serving-modifieraren med kommatecken har lagts till i resurs-ID
-* Bilder: Bildservermodifierare som är tillagda i assetID ignoreras
-* Internet Explorer 9: s7sdk.event: PageMouseEvent: klicka och dubbelklicka på händelser som utlöser en krasch i webbläsaren
-* Internet Explorer 9 och Internet Explorer 10: Visningsprogrammet för eCatalog bryts när bildschemat har aktiverats med JavaScript-mallen
-* MixedMedia Viewer: Zoomknappens tillstånd återställs inte när resurstyper byts ut
-* MixedMedia Viewer: Visningsprogrammet är komprimerat i svarsläge om den första resursen är 2dspinset
-* Firefox: Brutna bildikoner visas kort på utfällbar bild tills rutor har lästs in
-* Knipningsgester genererar inte zoom
+* eCatalog Viewer visar inte PageIndicator på iPhone.
+* Bilder kan inte visas om Image Serving-modifieraren med kommatecken har lagts till i resurs-ID:t.
+* Bilder: Image Serving-modifierare som är tillagda i assetID ignoreras.
+* Internet Explorer 9: s7sdk.event: PageMouseEvent: klicka och dubbelklicka på händelser som utlöser en krasch i webbläsaren.
+* Internet Explorer 9 och Internet Explorer 10: Visningsprogrammet för eCatalog bryts när bildschemat har aktiverats med JavaScript-mallen.
+* MixedMedia Viewer: Zoomknappens tillstånd återställs inte när resurstyper byts ut.
+* MixedMedia Viewer: Visningsprogrammet komprimeras i svarsläge om den första resursen är 2dspinset.
+* Firefox: Brutna bildikoner visas som en kort fras tills rutorna läses in.
+* Knipningsgester genererar inte zoom.
 * eCatalog: Bilder: JavaScript-fel med relativa länkar
 
 ## Kända fel och begränsningar {#section-368dd0dc138b44e28b49314e4ad0fa1a}
@@ -69,7 +69,7 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 * Beskärning av bildserverkommando stöds inte.
 * Knappen Stäng fungerar bara om visningsprogrammet är öppet i ett underordnat fönster.
 * Iscommands-modifieraren stöder inte Image Serving-modifierare som påverkar bildstorleken.
-* CSS-format&quot;display: none i DIV-behållare stöds inte för närvarande. Detta inkluderar Jquery hide()-metoden.
+* CSS-format&quot;display: none i DIV-behållare stöds inte för närvarande. Inkluderar Jquery hide()-metod.
 
 **eCatalog-visningsprogram**
 
@@ -84,14 +84,14 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 
 **Social visningsprogram**
 
-* För att återge miniatyrbilder korrekt i utgående e-post bör modifieraren `serverurl` ha en absolut URL.
+* Om du vill återge miniatyrbilder korrekt i utgående e-post väljer du `serverurl` modifierare ska ha en absolut URL.
 
 **Videovisningsprogram**
 
-* Posterbilden kan ha felet &quot;max size&quot;. Användaren kan behöva öka gränsvärdet för Image Serving Publish.
-* Bildtexter för video kräver en företagsregeluppsättning om de är värd för en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support för att få hjälp.
-* Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring
-* Svart bildruta i stället för förhandsvisningsbild kan visas på iPad- eller Android-enheter.
-* Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android-enheter.
-* Svarta kantlinjer visas på sidan om VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig på iPad-enheter.
-* Den sista bildrutan i videon kan förvrängas på iPad med iOS 7.
+* Posterbilden kan ha felet &quot;max size&quot;. Öka gränsvärdet för Image Serving Publish.
+* Bildtexter för videofilmer kräver en företagsregeluppsättning om de har en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support för att få hjälp.
+* Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
+* Svarta bildrutor i stället för förhandsvisningsbilder kan visas på iPad- eller Android™-enheter.
+* Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android™-enheter.
+* Svarta kantlinjer visas bredvid VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig på iPad-enheter.
+* Den sista videobildrutan kan förvrängas i iPad med iOS 7.
