--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-10-13-16.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-10-13-16.md
@@ -1,13 +1,13 @@
 ---
+title: Versionsinformation om Scene7 Viewer 5.5.2
 description: Versionsinformation om Scene7 Viewer 5.5.2
 solution: Experience Manager
-title: Versionsinformation om Scene7 Viewer 5.5.2
-feature: Dynamic Media Classic,visningsprogram,SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: f3efc1d4-1276-423b-bc22-557842cebc90
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '608'
+source-wordcount: '602'
 ht-degree: 0%
 
 ---
@@ -27,7 +27,7 @@ ht-degree: 0%
 * Uppdaterat AppMeasurement JavaScript-bibliotek till version 1.6.1.
 * Sökfunktionen har nu lagts till i eCatalog-visningsprogrammet.
 * HLS-direktuppspelad videouppspelning har lagts till som standardmetod för videoleverans i de flesta datorsystem. Flash-baserad HDS-videoströmning är fortfarande tillgängligt som ett alternativt uppspelningsalternativ.
-* Stöd för både mus- och pekrörelser som körs i Chrome-webbläsaren har lagts till. Microsoft Surface-enheter ingår i den här kategorin, men Microsoft Edge fungerar inte med pekrörelser i 5.5-visningsprogram.
+* Stöd för både mus- och pekrörelser som körs i Chrome-webbläsaren har lagts till. Microsoft Surface-enheter tillhör den här kategorin, men Microsoft Edge fungerar inte med pekrörelser i 5.5-visningsprogram.
 
 ## Felkorrigeringar för 5.5.1 {#section-c64001afa2aa460180141bc8dcd507ec}
 
@@ -36,28 +36,28 @@ ht-degree: 0%
 
 ## Kända fel och begränsningar för 5.5.1 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* Modifierare för bildservering från IS-kommandon läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
+* Funktionsändringstangenterna för bildservrar från IS läggs inte till i `req=set` förfrågan efter design. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
 
    `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
 
 * Utfällbar visningsprogram - Internet Explorer 9 visas ibland fortfarande på skärmen när musen är avstängd.
 * Skalning av webbläsarfönstret leder till felaktig storleksändring.
-* iPad 2 - En stor eCatalog-resurs kraschar Safari på iOS.
+* iPad 2 - En stor e-katalogresurs kraschar Safari på iOS.
 
 **Alla visningsprogram**
 
 * Vattenstämplar, förvrängning och låsning stöds inte.
 * Bildförinställningar stöds inte.
-* Det går inte att lägga till eller ta bort visningsprogrammet från DOM med `display:none` CSS eller genom att dynamiskt koppla loss det från den överordnade noden.
+* Lägga till eller ta bort visningsprogram från DOM med `display:none` CSS eller genom att dynamiskt koppla loss den från den överordnade noden stöds inte.
 * Om du bäddar in ett visningsprogram i en tabell kan visningsprogrammets storlek eller placering bli felaktig i icke-ursprungligt helskärmsläge. Adobe rekommenderar att du använder DIV i stället.
 * Parametrar med explicita instansnamn i koden kräver att instansnamn i URL:en också skrivs över (till exempel `zoomView.iconfeffect=0`).
-* Bildserverkommandot `crop` stöds inte.
+* Bildredigering, kommando `crop` stöds inte.
 * Knappen Stäng fungerar bara om visningsprogrammet är öppet i ett underordnat fönster.
 * IS-kommandomodifieraren stöder inte Image Serving-modifierare som påverkar bildstorleken.
 
 **eCatalog-visningsprogram**
 
-* Om du navigerar till en annan HTML-sida och sedan återgår till den första sidan återställs visningsprogrammet ibland.
+* Om du navigerar till en annan HTML-sida och sedan återgår till den andra sidan återställs visningsprogrammet till den första sidan.
 * Sidlayouten visas ibland felaktigt efter att iOS-enheten har roterats. När du zoomar in på sidan korrigeras layouten.
 * Interna länkar endast till den vänstra sidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
 * `InitalFrame` länkar endast till den vänstra sidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
@@ -69,16 +69,16 @@ ht-degree: 0%
 
 **Social visningsprogram**
 
-* För att miniatyrerna ska kunna återges korrekt i utgående e-post bör modifieraren `serverurl` ha en absolut URL.
+* Om du vill återge miniatyrbilder korrekt i utgående e-post väljer du `serverurl` modifierare ska ha en absolut URL.
 
 **Videovisningsprogram**
 
-* Det kan uppstå ett `max size`-fel i förhandsvisningsbilden. Du kan behöva öka gränsvärdet för Image Serving Publish.
-* Videobeskrivningar kräver en företagsregeluppsättning om HTML-värdsidan hanteras från en extern server (inte en Scene7-server). Kontakta teknisk support.
+* Posterbilden kan träffa på en `max size` fel. Du kan behöva öka gränsvärdet för Image Serving Publish.
+* Videobeskrivningar kräver en företagsregeluppsättning om värdsidan för HTML hanteras från en extern server (inte en Scene7-server). Kontakta teknisk support.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
-* På iPad- eller Android-enheter kan en svart ram visas i stället för en förhandsvisningsbild.
-* På iPad- eller Android-enheter kan en svart bildruta blinka på skärmen när visningsprogrammet läses in.
-* På iPad-enheter visas svarta kanter på sidan av VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig.
+* På iPad- eller Android-enheter kan en svart bildruta visas i stället för en förhandsvisningsbild.
+* På iPad- eller Android-enheter kan en svart bildruta blinka på skärmen under inläsningen av visningsprogrammet.
+* På iPad-enheter visas svarta kantlinjer på sidan om VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig.
 * I iPad kan den sista videobildrutan förvrängas med iOS 7.
 * I Chrome-, Firefox- och Internet Explorer-webbläsare kan det förekomma makroblockering vid videosökning i HLS-direktuppspelningsläge.
 * Affischbilden kanske inte visas i Microsoft Edge-webbläsaren för första gången.
