--- a/help/s7-release-notes/s7rn2017.md
+++ b/help/s7-release-notes/s7rn2017.md
@@ -1,12 +1,12 @@
 ---
 title: Versionsinformation för Dynamic Media
-description: '"Den senaste versionsinformationen för Adobe Dynamic Media Classic, en del av Adobe Experience Manager-lösningen i Adobe Experience Cloud."'
+description: '"Den senaste versionsinformationen för Adobe Dynamic Media Classic, som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud."'
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 2826138f-799e-4f2c-8993-0cfdb9328406
-source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '1375'
+source-wordcount: '1359'
 ht-degree: 0%
 
 ---
@@ -17,7 +17,7 @@ Den senaste versionsinformationen om Adobe Dynamic Media Classic som ingår i Ad
 
 ## Versionsinformation för Dynamic Media {#topic-1f5af440670a42f3bbb662eb86a196c6}
 
-Den senaste versionsinformationen för Adobe Dynamic Media Classic-delen av [!DNL Adobe Experience Manager]-lösningen i [!DNL Adobe Experience Cloud].
+Den senaste versionsinformationen för Adobe Dynamic Media Classic som en del av [!DNL Adobe Experience Manager] lösningen i [!DNL Adobe Experience Cloud].
 
 * [Allmänt](s7rn2017.md#section-52afeb72ecb34c1585ea67a5051825a2)
 * [Scene7 Publishing System](s7rn2017.md#section-24487cb493444d808fb7193f0a00cdd4)
@@ -32,14 +32,14 @@ Se [HTTP2 Delivery of Content FAQ](https://experienceleague.adobe.com/docs/exper
 
 ## Scene7 Publishing System {#section-24487cb493444d808fb7193f0a00cdd4}
 
-Fullständig dokumentation finns i [https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro)
+Fullständig dokumentation finns i  [https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro)
 
 **Nya funktioner, förbättringar och felkorrigeringar**
 
-* Funktionen för videoinspelning har tagits bort från användargränssnittet i [!DNL Adobe Scene7 Publishing System].
+* Funktionen för videoinspelning har tagits bort från [!DNL Adobe Scene7 Publishing System] användargränssnitt.
 * Autentisering har lagts till för alla Scene7-servrar där det är nödvändigt och möjligt.
 * Felkorrigering som involverar listvyn i papperskorgen.
-* **Användarfunktionen SPSAdmin** har tagits bort från användarhanteringen på grund av säkerhetsproblem.
+* Borttagen **Skapa SPSAdmin** användarfunktionen från användarhantering på grund av säkerhetsproblem.
 * FTP WebAdmin har nu stöd för OKTA-autentisering.
 * Funktionen för standardlösenordet som skapades för nya Media Portal-användare har tagits bort.
 * Felkorrigering med det tillfälliga lösenord som skapades när en ny användare lades till. Lösenordet uppfyller inte de nödvändiga lösenordskraven.
@@ -49,7 +49,7 @@ Fullständig dokumentation finns i [https://experienceleague.adobe.com/docs/dyna
 * Felkorrigering med välkomstmeddelandet som skickades till nya Scene7-användare som inte innehöll autentisering för att kontrollera vissa inställningar.
 * Felkorrigering som innebär att det inte gick att hämta en FTP-mapplista om någon mapp hade specialtecken i namnet.
 * Konfigurera OKTA-tjänsteleverantörer för Scene7-miljöer.
-* Stöd för Marketing Cloud Org ID för Viewer Analytics har lagts till.
+* Stöd för Experience Cloud Org ID för Viewer Analytics har lagts till.
 * Implementerad Scene7 SAML-konsument.
 
 ## Visare (Image Serving 5.8.1) {#section-e1940d4cedc641bca93236b4c1e0cfa7}
@@ -65,7 +65,7 @@ Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https:
 * Stöd för extern videouppspelning har lagts till i Video Viewer.
 * Förbättrad rullning av färgrutor på enheter med pekskärm.
 * Stöd för enheter med både mus- och pekrörelser som kör webbläsaren Internet Explorer 11 och Edge har lagts till.
-* Lagt till möjlighet att ange både vänster och höger sida med parametern `initialframe` i stående läge på mobila enheter i eCatalog-visningsprogrammet.
+* Lagt till möjlighet att ange både vänster och höger sida med `initialframe` i stående läge på mobila enheter i eCatalog-visningsprogrammet.
 
 **Felkorrigeringar för Image Serving 5.8.1**
 
@@ -74,20 +74,20 @@ Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https:
 
 **Kompatibilitetsanteckningar**
 
-* Blackberry
+* BlackBerry®
 
-   * Inkompatibelt med äldre AVS-uppsättningar. Klienter kan behöva överföra AVS-uppsättningar igen för att tillåta uppspelning.
+   * Inkompatibelt med äldre AVS-uppsättningar. Klienter måste överföra AVS-uppsättningar igen för att tillåta uppspelning.
 
 * Allmänt
 
-   * Skalning på webbläsarsidan kan göra användargränssnittet och bilderna suddiga när användaren zoomar in på sidan. Gränssnittsformatering kan också visas felaktigt beroende på zoomning. Detta kommer att överföras till helskärm.
-   * På grund av storleksbegränsning på mobila enheter använder Mixed Media Viewer glidningsgest för att växla bildrutor i inbäddade bilduppsättningar i stället för att trycka på den inbäddade färgrutekomponenten. Komponenten finns där som en visuell indikator.
+   * Skalning på webbläsarsidan kan göra användargränssnittet och bilderna suddiga när användaren zoomar in på sidan. Gränssnittsformatering kan också visas felaktigt beroende på zoomning. Den här effekten överförs till helskärm.
+   * På grund av storleksbegränsningar på mobila enheter använder visningsprogrammet för blandade media gester för att växla bildrutor i inbäddade bilduppsättningar i stället för att trycka på den inbäddade färgrutekomponenten. Komponenten finns där som en visuell indikator.
    * I Internet Explorer-webbläsare och vissa touchenheter upptar helskärmsläget inte hela enhetsskärmen. I stället ändras programmets storlek till webbläsarfönstrets storlek.
-   * Knappen Stäng fungerar inte iOS 8.0 och 8.1, men finns inte längre i iOS 8.2
+   * Knappen Stäng fungerar inte i iOS 8.0 och 8.1, men finns inte längre i iOS 8.2
 
 * Galaxy SIII
 
-   * Minnesläcka som kan ses med Zoom- och eCatalog HTML5-visningsprogram. Upprepad navigering i bildrutor kan göra att webbläsaren kraschar.
+   * Minnesläcka som visas i visningsprogrammen Zoom och eCatalog HTML 5. Upprepad navigering i bildrutor kan göra att webbläsaren kraschar.
    * Dubbeltryck på visningsprogrammet kan göra att hela sidan zoomas i stället för bara visningsprogrammet med skalning på webbläsarsidan aktiverad.
 
 * Galaxy S4
@@ -104,22 +104,22 @@ Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https:
 
 * HTML Mobile Devices
 
-   * HTC-mobilenheter visar våra upptäckter att det inte går att inaktivera inbyggd nyp-zoom är en funktion i HTC UI wrapper (HTC Sense). Det kan göra att hela sidan zoomas när du använder gesten &quot;nyp för att zooma&quot; i visningsprogrammet. Föreslå att dubbelknacka i stället.
+   * Mobila HTC-enheter i Adobe-upptäckter visar att det inte går att inaktivera inbyggd nyp-zoom är en funktion i HTC UI-wrapper (HTC Sense). Det här problemet kan göra att hela sidan zoomas när du använder Nyp för att zooma i visningsprogrammet. Föreslå att dubbelknacka i stället.
    * Bildschemaikoner kan överlappa om bildscheman är små och nära varandra.
 
 * HTML5-video
 
    * Internet Explorer 9: anpassade förhandsgranskningsbilder visas inte.
    * `IntialBitRate` modifierare stöds bara med HLS- och Flash HDS-uppspelning. Det fungerar inte när uppspelningen använder den inbyggda spelaren.
-   * OGG- och WebM-progressiv uppspelning stöds inte just nu.
-   * Webbläsarskalning kan göra att videospelaren visas i fel storlek (inklusive visningsinställningar för Windows OS-kontrollpanelen)
-   * Videosökning med HLS-strömning på Safari kan vara inkonsekvent.
+   * OGG- och WebM-progressiv uppspelning stöds inte för närvarande.
+   * Webbläsarskalning kan göra att videospelaren visas i fel storlek (inklusive visningsinställningar för Windows OS-kontrollpanelen).
+   * Videosökning med HLS-direktuppspelning på Safari kan vara inkonsekvent.
 
 * Internet Explorer
 
-   * Quirks-läget stöds inte just nu.
+   * Quirks-läget stöds för närvarande inte.
    * Kompatibilitetsläget stöds för närvarande inte.
-   * Internet Explorer på mobilen stöds inte för närvarande.
+   * Internet Explorer på mobilen stöds för närvarande inte.
 
 * iOS
 
@@ -133,56 +133,56 @@ Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https:
 
 **Kända fel och begränsningar**
 
-* Image Serving-modifierare från `iscommands` har inte lagts till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
+* Funktionsändringstecken för bildbehandling från `iscommands` läggs inte till i `req=set` förfrågan efter design. Modifierare som bara påverkar bildvisningen fungerar bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
 
    `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
 
-* [Flyout ] IE9 kan ibland finnas kvar på skärmen när musen är avstängd.
+* [Utfällbar] IE9 finns ibland kvar på skärmen när musen är avstängd.
 * Webbläsarskalning leder till fel storleksändring.
-* iPad 2: Big eCatalog-resurs kommer att krascha Safari på iOS.
+* iPad 2: Stora e-katalogresurser kraschar Safari på iOS.
 * Alla visningsprogram
 
    * Vattenstämplar, förvrängning och låsning stöds inte.
    * Bildförinställningar stöds inte.
-   * Det går för närvarande inte att lägga till eller ta bort visningsprogrammet från DOM med `display:none` CSS eller genom att dynamiskt koppla loss det från den överordnade noden.
+   * Lägga till eller ta bort visningsprogram från DOM med `display:none` CSS eller genom att dynamiskt koppla loss den från den överordnade noden stöds inte för närvarande.
 
 * HTML5 Alla visningsprogram
 
    * Inbäddning av visningsprogram i tabell kan leda till felaktig storlek eller placering av visningsprogrammet i icke-ursprungligt helskärmsläge. Föreslå användning av DIV i stället.
    * Parametrar med explicita instansnamn i koden kräver att instansnamn i URL:en också skrivs över (till exempel `zoomView.iconfeffect=0`).
-   * Beskärning av bildserverkommandon stöds inte just nu.
+   * Beskärning av bildserverkommando stöds för närvarande inte.
    * Knappen Stäng fungerar bara om visningsprogrammet är öppet i det underordnade fönstret.
-   * Modifieraren `iscommands` stöder inte Image Serving-modifierare som påverkar bildstorleken.
+   * The `iscommands` modifieraren stöder inte Image Serving-modifierare som påverkar bildstorleken.
 
 * HTML5 eCatalog
 
-   * Om användaren navigerar till en annan HTML-sida och ibland återgår till den första sidan återställs visningsprogrammet.
+   * Om du navigerar till en annan HTML-sida och återgår till den första sidan återställs visningsprogrammet ibland.
    * Sidlayouten visas ibland felaktigt efter att iOS-enheten roterats. När du zoomar in på sidan korrigeras layouten.
    * Interna länkar endast till den vänstra sidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
    * På grund av webbläsarbegränsningar är utskriftsfunktionen inte tillgänglig i IE9.
 
 * HTML5 MixedMedia
 
-   * Ljudspårets uppspelning stöds för närvarande inte.
+   * Ljudspårets uppspelning stöds inte.
 
 * HTML5 Social
 
-   * För att miniatyrerna ska kunna återges korrekt i utgående e-post måste modifieraren `serverurl` ha en absolut URL.
+   * Om du vill återge miniatyrbilder korrekt i utgående e-post väljer du `serverurl` modifierare måste ha en absolut URL.
 
 * HTML5-video
 
-   * Posterbilden kan ha felet &quot;max size&quot;. Företag kan behöva öka begränsningsinställningen för Image Serving Publish.
-   * Videoklipp kräver en företagsregeluppsättning om det är en extern server (inte en Dynamic Media-server) som är värd för HTML-sidan. Kontakta supporten för Adobe om du behöver hjälp.
-   * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring
-   * Svart bildruta i stället för förhandsvisningsbild kan visas på iPad- eller Android-enheter.
-   * Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android-enheter.
-   * Svarta kantlinjer visas på sidan om VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig på iPad-enheter.
-   * Den sista bildrutan i videon kan förvrängas på iPad med iOS 7.
+   * Posterbilden kan ha felet &quot;max size&quot;. Företaget måste öka begränsningsinställningen för Image Serving Publish.
+   * Videoklipp kräver en företagsregeluppsättning om värdtjänsten för HTML-sidan hanteras från en extern server (inte en Dynamic Media-server). Kontakta supporten för Adobe om du behöver hjälp.
+   * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
+   * Svarta bildrutor i stället för förhandsvisningsbilder kan visas på iPad- eller Android™-enheter.
+   * Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android™-enheter.
+   * Svarta kantlinjer visas bredvid VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig på iPad-enheter.
+   * Den sista videobildrutan kan förvrängas i iPad med iOS 7.
    * Ibland kan makroblockering förekomma under videosökning i HLS-direktuppspelningsläge i Chrome, Firefox och Internet Explorer.
-   * Förhandsvisningsbilden kanske inte visas i Microsoft Edge-webbläsaren för första gången.
-   * Filmminiatyrbilden kan döljas när videon har lästs in i Internet Explorer 9 när progressiv uppspelning används.
+   * Förhandsvisningsbilden kanske inte visas i Microsoft® Edge-webbläsaren för första gången.
+   * Posterbilden kan döljas efter att videon har lästs in i Internet Explorer 9 när progressiv uppspelning används.
 
 ## Dynamic Media Image Serving 6.3.2 och Image Rendering 6.3.2 {#section-19a3e96f52c74757bcdea0f8a11001f2}
 
-* IC-verktyg - flaggan `downsample2x2` stöds inte längre. Den här flaggan var en 2x2-nedsampling med låg kvalitet som inte längre används av IPS.
-* CORS-huvud - CORS-huvudet är för närvarande konfigurerat för `/is/content/`-begäranden.
+* Konc-verktyg - `downsample2x2` flagga stöds inte längre. Den här flaggan var en 2x2-nedsampling med låg kvalitet som inte längre används av IPS.
+* CORS-huvud - CORS-huvudet är för närvarande konfigurerat för `/is/content/` förfrågningar.
