--- a/help/s7-release-notes/s7rn65.md
+++ b/help/s7-release-notes/s7rn65.md
@@ -1,54 +1,54 @@
 ---
-description: '"Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.5, som ingår i Adobe Experience Manager-lösningen i Adobe Marketing Cloud."'
-solution: Experience Manager
 title: Versionsinformation om Scene7 Publishing System 6.5
+description: '"Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.5, som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud."'
+solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 7aac3b5d-541a-49e6-98ae-c22eee8d2702
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '714'
+source-wordcount: '708'
 ht-degree: 0%
 
 ---
 
 # Versionsinformation om Scene7 Publishing System 6.5{#scene-publishing-system-release-notes}
 
-Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.5 i Adobe Marketing Cloud.
+Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.5 i Adobe Experience Cloud.
 
 ## Nya programfunktioner, förbättringar och korrigeringar {#section-30a6201e50b74fc194c08bd732672ac1}
 
 **Viktig information om tillgångspublicering**
 
-Publiceringsprocessen i Scene7 förändras under första och andra kvartalet 2013. Den nuvarande tvåstegsprocessen för Markera för publicering och publicering kommer att effektiviseras till en enstegsprocess. Läget Markera för publicering finns inte längre och resurserna är antingen publicerade eller opublicerade. Om du markerar en resurs för publicering publiceras den automatiskt.
+Publiceringsprocessen i Scene7 förändras under första och andra kvartalet 2013. Den nuvarande tvåstegsprocessen för Markera för publicering och publicering har nu strömlinjeformats till en enstegsprocess. Läget Markera för publicering finns inte längre och resurserna är antingen publicerade eller opublicerade. Om du markerar en resurs för publicering publiceras den automatiskt.
 
 **Resurshantering och publicering**
 
 * Automatiserad uppsättningsgenerering
 
    Lagt till möjlighet att välja resurser och köra den automatiserade uppsättningsgenereringen som ett oberoende jobb.
-* Stöd för uppackning av ZIP/TAR-filer vid uppladdning till Adobe [!DNL Scene7 Publishing System] har lagts till.
+* Stöd för uppackning av ZIP/TAR-filer vid överföring till Adobe [!DNL Scene7 Publishing System].
 
    När du överför ZIP- och TAR-filer till SPS kan du välja att packa upp resurser till den katalogstruktur som ingår i de komprimerade filerna.
 
 * Stöd för att dra och släppa mappar har lagts till.
 
-   Du kan också flytta en mapp genom att välja **[!UICONTROL File]** > **[!UICONTROL Move Folder]**.
+   Du kan även flytta en mapp genom att välja **[!UICONTROL File]** > **[!UICONTROL Move Folder]**.
 
 **Tittare**
 
-* Lagt till tre nya HTML5-visningsprogram: MixedMedia_HTML5, FlyoutZoom_HTML5 och Mobile_Spin_HTML5 (har stöd för både snurra på en- och fleraxelsaxlar).
+* Lagt till tre nya visningsprogram för HTML5: MixedMedia_HTML5, FlyoutZoom_HTML5 och Mobile_Spin_HTML5 (har stöd för både snurruppsättningar med en eller flera axlar).
 
 <!-- 
   [More information](http://help.adobe.com/en_US/scene7/using/WS6E593DEA-7D81-4cd6-84B0-85E8BB274176.html#WS1c46793299cf21d77e926d1613177f0a020-8000.html).  -->
-* Alla HTML5-visningsprogram stöds nu på skrivbordet.
+* Alla visningsprogram för HTML5 stöds nu på skrivbordet.
 
 <!--   [More information](http://help.adobe.com/en_US/scene7/using/WS6E593DEA-7D81-4cd6-84B0-85E8BB274176.html#WS1c46793299cf21d77e926d1613177f0a020-8000.html). -->
 * Följande förbättringar har lagts till i Scene7 Viewer, HTML5 Software Development Kit:
 
    * Förbättringar av JavaScript-bibliotek
 
-      Stöd för [!DNL Internet Explorer] 7, 8 och 9 har lagts till i de flesta komponenter. Inbäddade standard-CSS-egenskaper i JavaScript-filer för komponenter. Reviderad JSON-begäran med stöd för flera visningsprogram på samma webbsida.
+      Stöd för [!DNL Internet Explorer] 7, 8 och 9 för de flesta komponenter. Inbäddade standard-CSS-egenskaper i JavaScript-filer för komponenter. Reviderad JSON-begäran med stöd för flera visningsprogram på samma webbsida.
 
    * Stöd för verktygstips för knappar och färgrutor har lagts till.
    * Stöd för övertäckningsmeddelande har lagts till i komponenten FlyoutZoomView.
@@ -68,7 +68,7 @@ Publiceringsprocessen i Scene7 förändras under första och andra kvartalet 201
    * Lagring av standardkonfigurationsattribut på serversidan.
    * DHTML - utfällbar visningsprograminjektion på sidan.
 
-* Nu kan ni enkelt skapa och driftsätta lokaliserade visningsprogram för att nå ut bättre globalt. Den här funktionen görs via Scene7 Viewer, HTML5 SDK.
+* Nu kan ni enkelt skapa och driftsätta lokaliserade visningsprogram för att nå ut bättre globalt. Detta görs med Scene7 Viewer, HTML5 SDK.
 
 **Bildredigering**
 
@@ -88,14 +88,14 @@ Publiceringsprocessen i Scene7 förändras under första och andra kvartalet 201
 
 **Innehållsmallar (dynamiska banderoller och web-to-print)**
 
-* Dynamiska banderoller har förbättrat HTML5-stöd, inklusive korskompilering mellan ActionScript och Javascript
-* Förhandsgranskning av [!DNL Dynamic Banners] med ett klick är nu tillgänglig i Firefox
-* **[!UICONTROL Web-To-Print]** gör det nu möjligt att dynamiskt skapa hyperlänkar i PDF-utdata
-* **[!UICONTROL Web-To-Print]** har stöd för  [!DNL OpenType] sammanhangsberoende ligaturer  [!DNL Adobe Illustrator] och  [!DNL Adobe InDesign] filtereffekter
+* Dynamiska banderoller har förbättrat stöd för HTML 5, inklusive ActionScript/Javascript-korskompilering
+* Förhandsgranska med ett klick [!DNL Dynamic Banners] är nu tillgängligt i Firefox
+* **[!UICONTROL Web-To-Print]** gör det nu möjligt att dynamiskt skapa hyperlänkar i utdata från PDF
+* **[!UICONTROL Web-To-Print]** supports [!DNL OpenType®] kontextuella ligaturer och [!DNL Adobe Illustrator] och [!DNL Adobe InDesign] filtereffekter
 
 **eVideo**
 
-* Det nya alternativet **[!UICONTROL Show Encoded Videos]** på **[!UICONTROL General Settings]**-sidan av **[!UICONTROL Application Setup]** innebär att du nu kan konsolidera videomaterial till en enda resurstyp för att effektivisera sökning och bläddring.
+* Den nya **[!UICONTROL Show Encoded Videos]** på **[!UICONTROL General Settings]** sida av **[!UICONTROL Application Setup]** innebär att du nu kan samla videomaterial i en enda resurstyp för att effektivisera sökning och surfning.
 
 <!--   [More information](http://help.adobe.com/en_US/scene7/using/WSCCBA9D3A-06A3-4f29-AF6B-36CBB2A655F1.html).  -->
 
@@ -106,7 +106,7 @@ Publiceringsprocessen i Scene7 förändras under första och andra kvartalet 201
 
 <!--   [More information](http://help.adobe.com/en_US/scene7/using/WSE86ACF2B-BD50-4c48-A1D7-9CD4405B62D0.html#WS1c46793299cf21d7-39fae9c1131ba8968f7-7fff.html). -->
 * Förbättrade prestanda för videokodning.
-* Stöd för videouppspelning på [!DNL Blackberry]- och [!DNL WinMobile 7]-enheter har lagts till, inklusive distribution via **[!UICONTROL Universal Viewer]**.
+* Stöd för videouppspelning på har lagts till [!DNL BlackBerry®] och [!DNL WinMobile 7] enheter, inklusive driftsättning via **[!UICONTROL Universal Viewer]**.
 
 <!--   [More information](http://help.adobe.com/en_US/scene7/using/WS6E593DEA-7D81-4cd6-84B0-85E8BB274176.html#WS1c46793299cf21d77e926d1613177f0a020-8000.html) or the [eVideo chapter](http://help.adobe.com/en_US/scene7/using/WS53492AE1-6029-45d8-BF80-F4B5CF33EB08.html). -->
 
@@ -120,6 +120,6 @@ Publiceringsprocessen i Scene7 förändras under första och andra kvartalet 201
 
 **Adobe Digital Marketing Suite Integrations**
 
-* [!DNL Scene7] har nu stöd för  [!DNL Adobe Test&Target] HTML-erbjudanden för personalisering. Sammanställ dynamiskt erbjudandeelement för mycket relevant banderollinnehåll baserat på [!DNL Test&Target] profilskript och kampanjregler.
+* [!DNL Scene7] nu har stöd för [!DNL Adobe Test&Target] HTML erbjuder personalisering. Sammanställ dynamiskt olika erbjudandeelement för mycket relevant banderollinnehåll baserat på [!DNL Test&Target] profilskript och kampanjregler.
 
-* Utökad integrering med [!DNL Adobe CQ] erbjuder mappbaserad synkronisering av resurslagringsplatsen och ett enhetligt innehållsgränssnitt. Få åtkomst till, bläddra bland och infoga publicerade dynamiska resurser direkt i ditt [!DNL Scene7]-konto i CQ-sidmallar.
+* Utökad integrering med [!DNL Adobe CQ] erbjuder mappbaserad synkronisering av resurslagringsplatsen och ett enhetligt innehållsgränssnitt. Få åtkomst till, bläddra bland och infoga publicerade dynamiska resurser direkt i [!DNL Scene7] till CQ-sidmallar.
