--- a/help/s7-release-notes/s7rn66.md
+++ b/help/s7-release-notes/s7rn66.md
@@ -1,20 +1,20 @@
 ---
-description: '"Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.6, en del av Adobe Experience Manager-lösningen i Adobe Marketing Cloud."'
-solution: Experience Manager
 title: Versionsinformation om Scene7 Publishing System 6.6
+description: '"Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.6, en del av Adobe Experience Manager-lösningen i Adobe Experience Cloud."'
+solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 19c323db-7da8-47ae-a9d9-4ead4b8d739e
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '535'
+source-wordcount: '530'
 ht-degree: 0%
 
 ---
 
 # Versionsinformation om Scene7 Publishing System 6.6{#scene-publishing-system-release-notes}
 
-Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.6 i Adobe Marketing Cloud.
+Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.6 i Adobe Experience Cloud.
 
 ## VIKTIGT MEDDELANDE: DHTML-VISNINGSPROGRAM - LIVSLÄNGD {#section-58966909d9ec4eacbb6153b83b1642d3}
 
@@ -45,7 +45,7 @@ Den senaste versionsinformationen som beskriver de senaste funktionerna, förbä
    * Förbättringar av eCatalog-sidnavigering, stödrastervisning, sidvy och miniatyrbilder för färgrutor.
    * Loggningsstöd och spårningssatser för felsökning.
 
-* Körklara HTML5-visningsprogram
+* Färdiga visningsprogram för HTML5
 
    * Nu kan du utveckla en videospelare med möjlighet att spela upp på stationära datorer och på flera mobila enheter, allt från en enda plattform. Du kan skapa den här funktionen med Scene7 Viewer, HTML5 Software Development Kit, version 6.5.
    * Ett nytt inbäddat visningsprogram för utfällbar zoom (FlyoutViewer) är nu tillgängligt för stationära datorer och mobila enheter.
@@ -53,7 +53,7 @@ Den senaste versionsinformationen som beskriver de senaste funktionerna, förbä
 * Bädda in kod
 
    * Inbäddad SDK för Universal Viewer är nu integrerat med Scene7 Publishing System.
-   * Bädda in HTML5-visningsprogram med JavaScript (inte iframe).
+   * Inbäddning av visningsprogram för HTML 5 med JavaScript (inte iframe).
    * Stöd har lagts till för resurs- och visningsmodifierare i universalvisningsprogrammet.
    * Stöd för JavaScript-funktioner i Universal Viewer-inbäddningskoden, till exempel spårning via SiteCatalyst.
 
@@ -92,8 +92,6 @@ Den senaste versionsinformationen som beskriver de senaste funktionerna, förbä
 
 **eVideo**
 
-* En ny, körklar universell HTML5 Video-spelare som gör att du kan designa alla videokomponenter en gång, t.ex. knappar och spela upp HTML5-indata och sedan leverera bästa möjliga videouppspelningsupplevelse på flera enheter och skärmar.
-
-<!--   See [About using HTML5 video](http://help.adobe.com/en_US/scene7/using/WS98ca2e6790647c064dcc4e2c1399dadca0f-8000.html). -->
+* Den nya universella videospelaren HTML5 som gör att du kan designa alla videokomponenter en gång - t.ex. knappar och uppspelningstimer - i HTML 5 och sedan leverera bästa möjliga videouppspelningsupplevelse på flera enheter och skärmar.
 
 * Förbättrad videokodningstid där en videofil läses och sedan konverteras till flera kodningar.
