--- a/help/s7-release-notes/s7rn68.md
+++ b/help/s7-release-notes/s7rn68.md
@@ -1,24 +1,24 @@
 ---
 title: Versionsinformation om Scene7 Publishing System 6.8 (maj 2014)
-description: '"Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.8, som ingår i Adobe Experience Manager-lösningen i Adobe Marketing Cloud."'
+description: '"Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.8, som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud."'
 solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: f930fbf8-2aa4-4e6e-ad8d-4f0a0c76ff0e
-source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '1897'
+source-wordcount: '1877'
 ht-degree: 0%
 
 ---
 
 # Versionsinformation om Scene7 Publishing System 6.8 (maj 2014){#scene-publishing-system-release-notes-may}
 
-Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.8 som en del av Adobe Experience Manager-lösningen i Adobe Marketing Cloud.
+Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.8 som en del av Adobe Experience Manager-lösningen i Adobe Experience Cloud.
 
 ## Versionsinformation om Scene7 Publishing System 6.8 (maj 2014) {#topic-4517aab837ea4d6d8204425958860e5a}
 
-Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och korrigeringarna för [!DNL Adobe Scene7 Publishing System] 6,8-delen av Adobe Experience Manager-lösningen i [!DNL Adobe Marketing Cloud].
+Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och korrigeringarna för [!DNL Adobe Scene7 Publishing System] 6,8-delar av Adobe Experience Manager-lösningen i [!DNL Adobe Experience Cloud].
 
 * [Frigör högdagrar](s7rn68.md#section-524cffc79c1f4bb38627a5ecccd0bf52)
 * [Tittare](s7rn68.md#section-609885a9c8514a4095da74a0b526138d)
@@ -33,9 +33,9 @@ Den senaste versionsinformationen som beskriver de senaste funktionerna, förbä
 
 ## Frigör högdagrar {#section-524cffc79c1f4bb38627a5ecccd0bf52}
 
-* Stöd för responsiv webbdesign - responsiv bildvisning som baseras på brytpunkter och responsiva HTML5-visningsprogram (bilder, video, blandade media, eCatalog, Spinsets, Swatchsets, Zoom) som dynamiskt ändrar storlek baserat på sidlayout.
+* Stöd för responsiv webbdesign - responsiv bildvisning som baseras på brytpunkter och responsiva HTML 5-visningsprogram (bilder, video, blandade media, eCatalog, Spinsets, Swatchsets, Zoom) som dynamiskt ändrar storlek baserat på sidlayout.
 * Integrering med Adobe Analytics Video Report.
-* Avancerad anpassning av HTML5-visningsprogram - Skapa anpassade visningsprograminteraktioner med den inbäddade webbsidan.
+* Avancerad anpassning av visningsprogram för HTML5 - Skapa anpassade visningsprograminteraktioner med den inbäddade webbsidan.
 * Bildförbättring - Möjlighet att beskära bilder till inbäddade banor vid leverans.
 
 ## Tittare {#section-609885a9c8514a4095da74a0b526138d}
@@ -44,36 +44,36 @@ Följande har uppdaterats:
 
 * Lägsta systemkrav för Windows är nu Windows 7.
 * Lägsta systemkrav för Internet Explorer är nu version 9.
-* Lägsta systemkrav för Mac OS är nu Mac OS 10.8.
+* Lägsta systemkrav för macOS är nu macOS 10.8.
 * Lägsta systemkrav för Safari är nu version 6.
 
 Följande har omarbetats:
 
 * HTML5-visningsprogram som stöder responsiv design.
-* HTML5-visningsprogram för att använda CSS-indata och storleksmarkörer för att styra visningen på datorer och mobila enheter.
+* HTML5-visningsprogram som använder CSS-indata och storleksmarkörer för att styra visningen på datorer och mobila enheter.
 
 Följande stöds nu:
 
-* Adobe Analytics videorapporter är integrerade för HTML5 Video Viewer och Mixed Media Viewer.
-* Händelsespårning för flera HTML5-visningsprogram på samma sida.
-* `SetIndicator` har lagts till i HTML5 Zoom Viewer och i HTML5 Mixed Media Viewer för att visuellt representera färgrutor på mobila enheter.
-* `getComponent` API har lagts till för att tillåta extern åtkomst till HTML5-visningsprogramkomponenter.
+* Integrering av Adobe Analytics videorapporter för HTML5 Video Viewer och Mixed Media Viewer.
+* Händelsespårning för flera HTML 5-visningsprogram på samma sida.
+* Tillagd `SetIndicator` till HTML5 Zoom Viewer och HTML5 Mixed Media Viewer för att visuellt representera färgrutor på mobila enheter.
+* Tillagd `getComponent` API som tillåter extern åtkomst till visningsprogramkomponenter för HTML5.
 * Konfigurationsparametrar för HTML5-visningsprogrammet skickas som ett enda JSON-objekt.
 * WebVTT-bildtexter skickas som JSON-objekt, vilket eliminerar behovet av regeluppsättningskonfiguration.
 * JavaScript-mallar i HTML5 eCatalog Viewer för länkning av bildscheman till externa sidor.
-* Länka till sidor i eCatalog Viewer för HTML5.
+* Länka till sidor i HTML5 eCatalog Viewer.
 * `stagesize` till HTML5 Flyout Viewer.
-* `initComplete` hanterare för HTML5-visningsprogram för att aktivera funktioner efter visningsprogram.
-* Analyshanterare för HTML5-visningsprogram som stöder spårning från tredje part.
+* `initComplete` hanterare till visningsprogram för HTML5 för att aktivera funktioner efter visningsprogram.
+* Analyshanterare till visningsprogram för HTML5 som stöder spårning från tredje part.
 * Knappen Markera allt har lagts till för att göra det enklare att hämta länk och bädda in kod för delning via sociala medier.
 * Lagt till storleksändring för FlyoutZoomView.
 * Ställa in brytpunkter för inläsning av bilder för FlyoutZoomView när den används med responsiv design.
 * Klickstöd för volymjustering har lagts till.
 * SpinView och ZoomView använder gester för att bädda in webbsidor utan att interagera med visningsprogrammet.
-* `unload()` API har lagts till i SpinView och ZoomView för att tillåta kassering av komponenten vid körning.
+* Tillagd `unload()` API till SpinView och ZoomView för att tillåta kassering av komponenten vid körning.
 * Video Viewer för att använda gester på den inbäddade webbsidan när den inte interagerar med visningsprogrammet.
 * Anger inledande zoomområde för ZoomView.
-* ZoomView om du vill dölja `IconEffect`-komponenten när zoomning inte är möjlig
+* ZoomView för att dölja `IconEffect` -komponent när zoomning inte är möjlig
 
 Se även [Referenshandbok för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
 
@@ -85,7 +85,7 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 
 ## Bildbehandling {#section-113f27ea04cd4998a324bba71519c93c}
 
-* Stöd för progressiv JPEG.
+* Stöd för Progressiv JPEG.
 * Ändrade standardinställningar för oskarp maskning för nya klienter.
 * Oskarpa maskningsåtgärder har lagts till för att bearbeta resursjobb igen.
 * En varning lades till när bildförinställningar togs bort.
@@ -98,9 +98,9 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 * Implementerat API för att ta bort ett metadatavärde från en resurs (deleteAssetMetadata).
 * Ändrade standardsökbeteendet så att dc.subject inkluderades.
 * Lösenordsåterställningsmekanismen har ändrats - Lösenordet har glömts bort i flera steg för att undvika DOS.
-* Konvertera e-post med glömt lösenord från HTML till oformaterad text för att förhindra blockeringslistning.
+* Om du vill förhindra blockeringslistning konverterar du e-post med glömt lösenord från HTML till oformaterad text.
 * Standardrollen har tagits bort.
-* Förutom möjligheten att överföra innehåll till Scene7 Publishing System via FTP (server directory upload) och ladda upp URL:er, kan du nu även ladda upp innehåll med HTTP-POST. Mer information om hur du använder HTTP-POST finns i [API:t för bildproduktionssystem](/help/aem-ips-api/c-overview.md).
+* Förutom möjligheten att överföra innehåll till Scene7 Publishing System via FTP (server directory upload) och ladda upp URL:er, kan du nu även ladda upp innehåll med HTTP-POST. Se [API för bildproduktionssystem](/help/aem-ips-api/c-overview.md) om du vill ha mer information om hur du använder HTTP-POST.
 
 ## Felkorrigeringar {#section-456515477c8a4aa69309de43292ce5ed}
 
@@ -108,14 +108,14 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 
 * Potentiella säkerhetsproblem i visningsprogrammen Flash Fastzoom och Flyout.
 * HTML5-visningsprogram läses inte in på grund av en okänd UserAgent.
-* HTML5 eCatalog Viewer - dra-och-släpp fungerar inte i Internet Explorer med en sida som innehåller bildscheman.
+* HTML5 eCatalog Viewer - dra-och-släpp fungerar inte i Internet Explorer när sidan innehåller bildscheman.
 * HTML5 Video Viewer förhindrar åtkomst till att låsa upp plugin-programmet för Flash.
 * HTML5-visningsprogram förhindrar utskrift i Firefox-webbläsare.
-* Zoomvisningsprogrammet i HTML5 visar en viss darr när zoomningen initieras eller återställs.
-* HTTPS-stöd för HTML5- och AS3-visningsprogram.
-* autoResize ska inte finnas i HTML-koden för utfällbar visningsprogramkopia, URL/Embed.
-* Ingen videoserverurl-modifierare i HTML5 Video Viewer Copy URL.
-* Parametern `contenturl` är från webbadressen för HTML5-visningsprogrammet för publiceringsservern.
+* HTML5 Zoom Viewer visar en viss darr när zoomningen initieras eller återställs.
+* HTTPS-stöd för visningsprogram i HTML5 och AS3.
+* autoResize ska inte finnas i HTML i visningsprogramkod för text i text-/inbäddningsversion.
+* Det finns ingen videoserverurl-modifierare i HTML5-visningsprogrammets Kopiera-URL.
+* Parametern `contenturl` kommer från förhandsgransknings-URL:en för HTML5-visningsprogrammet på publiceringsservern.
 
 **Bildbehandling**
 
@@ -130,10 +130,10 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 * Mappen File-Move ska inte visas för användarrollen.
 * Det gick inte att se vissa av flikarna i detaljvyn.
 * Webb-till-utskrift-redigeringsfel när felsökningsversionen av Flash Player är installerad.
-* &quot;Space After&quot; fungerar inte; den ska använda sa, för närvarande margb.
-* När företagsinställningarna initieras skickar Scene7 Publishing System det duplicerade alternativet `<defaultValue>` i API `<createMetadataField>`.
+* &quot;Space After&quot; fungerar inte; bör använda `sa`, för närvarande är det `margb`.
+* När företagsinställningarna initieras skickar Scene7 Publishing System ett dubblettalternativ `<defaultValue>` i API `<createMetadataField>`.
 
-* Plugin-programmet Flash och Scene7 Publishing System kraschade på grund av att ett stort antal mappar inte har tillräckligt med Flash-minne.
+* Plugin-programmet Flash och Scene7 Publishing System kraschade på grund av att många mappar inte har tillräckligt med Flash-minne.
 * När du tar bort värdet för användardefinierat fält för Datum/tid skickar inte Scene7 Publishing System någon begäran till IPS (Image Publishing System).
 * Om Evideo-kodningsalternativen är aktiverade påträffades varningsmeddelandet Adaptive Video Encoding när en PDF- eller PSD-fil bearbetades igen.
 * Det gick inte att exportera resursen när SSL är aktiverat.
@@ -151,26 +151,26 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 
 ## Kända fel {#section-b2608177928b4174b080d89c938bb0d3}
 
-* Uppdateringen av Adobe Illustrator CC (Creative Cloud) och Adobe InDesign CC från maj 2014 förväntas medföra inkompatibilitet med plugin-program som skapar Scene7 FXG. Dessa inkompatibiliteter påverkar användare av Scene7 web-to-Print-lösning. Om du använder Scene7 Web-to-Print ska du inte uppgradera Illustrator och InDesign till denna Creative Cloud-uppdatering. Använd istället före maj 2014-versionen. Adobe Systems förväntar sig att kompatibiliteten för Scene7 FXG-skapande med nyare versioner av Illustrator och InDesign återställs under hösten 2014.
+* Uppdateringen av Adobe Illustrator och Adobe InDesign från maj 2014 förväntas medföra inkompatibilitet med plugin-program som skapar Scene7 FXG. Dessa inkompatibiliteter påverkar användare av Scene7 web-to-Print-lösning. Om du använder Scene7 Web-to-Print ska du inte uppgradera Illustrator och InDesign till denna Creative Cloud-uppdatering. Använd istället före maj 2014-versionen. Adobe Inc förväntar sig att kompatibiliteten för Scene7 FXG-skapande med nyare versioner av Illustrator och InDesign återställs under hösten 2014.
 * Knappen Bädda in kod fungerar inte när förinställningen Universal Viewer innehåller inaktiverad förinställning för AS2.
 * Om du återanvänder adaptiv videouppsättning skapas alltid en ny adaptiv videouppsättning.
 * Användargränssnittet i dialogrutan Jobbinformation trunkeras till höger efter att du har lagt till Tid i informationen.
 
 ## Funktioner som inte längre stöds {#section-7b04b6fdb8d1473880ccaf84211254ad}
 
-* Avstavning av text tas bort i Scene7 6.9 Fall. Avstavningsordlistorna definierar hur ord kan delas upp och avstavas för att ge optimalt textflöde.
+* Avstavning av text stöds inte i Scene7 6.9 Fall. Avstavningsordlistorna definierar hur ord kan delas upp och avstavas för att ge optimalt textflöde.
 * Från och med den 31 januari 2014 upphörde Scene7 officiellt stödet för DHTML-visningsplattformen.
-* Dynamiska (Flash) banners har tagits bort i den här versionen. Användningen av den här funktionen har minskat i takt med att andra tekniker har utvecklats för att skapa, hantera och leverera personaliserade webbanners. Funktionen Scene7 Dynamic Banner (Flash) kommer att fortsätta fungera på serversidan men kommer inte längre att stödjas.
+* Dynamiska (Flash) banners har tagits bort i den här versionen. Användningen av den här funktionen har minskat i takt med att andra tekniker har utvecklats för att skapa, hantera och leverera personaliserade webbanners. Funktionen Scene7 Dynamic Banner (Flash) fortsätter att fungera på serversidan, men stöds inte längre.
 * Påminnelse: Metadataservern och användningen av associerade API:er har officiellt tagits bort från den tidigare Scene7-versionen.
-* Scene7 Creative Suite Extensions (Flash Panels) kommer att bli inaktuellt i slutet av 2014. Ytterligare utveckling av arbetsflöden för innehållskonsumtion fokuserar på Adobe Experience Manager Dynamic Media och Creative Cloud. För Scene7 kommer överförings- och exportfunktionerna i Scene7 Publishing System att finnas kvar och kan användas i stället.
-* Från om med maj 2014 har Akamai inte längre stöd för e-postmeddelanden när Cacheinvalidering i Scene7 är slutförd. Den vanliga bearbetningstiden för CDN-ogiltigförklaring är ungefär åtta minuter. Om det finns en stor kö med förfrågningar, eller ett stort antal URL:er, kan bearbetningstiden ta något längre tid.
+* Scene7 Creative Suite Extensions (Flash Panels) togs bort i slutet av 2014. Ytterligare utveckling av arbetsflödena för innehållskonsumtion fokuserar på Adobe Experience Manager Dynamic Media och Creative Cloud. För Scene7 finns överförings- och exportfunktionerna i Scene7 Publishing System kvar och kan användas i stället.
+* Från om med maj 2014 har Akamai inte längre stöd för e-postmeddelanden när Cacheinvalidering i Scene7 har slutförts. Den vanliga bearbetningstiden för CDN-ogiltigförklaring är ungefär åtta minuter. Om det finns en stor kö med förfrågningar, eller många URL:er, kan bearbetningstiden ta något längre tid.
 * Kategorin &quot;Universella förinställningar&quot; på fliken URL och Bädda in kod i vyn Detalj.
 * RTMP-direktuppspelning för videodetaljvy.
 * E-postkommunikation och servleten SendMailSimple.jsp från Scene7 Publishing System.
 * Avsnittet för Scene7 FTP-konto i välkomstmallen för Media Portal-användare.
 * dc.title från filterpanelen som gjorde att IPS-instansen (Image Publishing System) gick ner.
-* Sociala funktioner som visas i helskärmsläge i HTML5-visningsprogram.
-* Stäng knappen som visas i helskärmsläge i HTML5-visningsprogram.
+* Sociala funktioner som visas i helskärmsläge i visningsprogram för HTML5.
+* Knappen Stäng visas i helskärmsläge i visningsprogram för HTML5.
 
 ## Versionsinformation om Dynamic Media Image Serving Viewers 5.0.1 {#section-3fc1a827bcc84c0488229d310086ad8e}
 
@@ -180,7 +180,7 @@ Se [https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/li
 
 **Allmänt**
 
-* Förbättrade minimikrav för iOS6.
+* Ökade minimikrav till iOS6.
 * Fast: Safari-verktygstips har flyttats bort från skärmen i helskärmsläge.
 * Refactored tooltips to address various bugs.
 
@@ -191,7 +191,7 @@ Se [https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/li
 **Behållare**
 
 * Fast: Felaktig behållarstorlek efter återgång från helskärm och växling av resurser.
-* Fast: Behållarkoordinaterna är felaktiga om behållaren flyttas via CSS-omvandling.
+* Fast: Behållarkoordinaterna är felaktiga om behållaren flyttas med CSS-omvandling.
 
 **EmailShare**
 
@@ -213,13 +213,13 @@ Se [https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/li
 
 **Färgrutor**
 
-* Fast: `selectSwatch`-metoden aktiveras inte när den är inbäddad i funktionen `initViewer()`.
+* Fast: `selectSwatch` metoden aktiveras inte när den är inbäddad i `initViewer()` funktion.
 
 **SocialShare**
 
 * Stöd för lagermodifiering har lagts till för att styra placeringen av delningsknappar.
 * Händelser som styr paus/uppspelning vid interaktion med sociala funktioner har lagts till.
-* Fast: Ikonen för delning via sociala medier tonas inte ut med `controlbar` på zoomning.
+* Fast: Ikonen för delning via sociala medier tonas inte ut med `controlbar` på Zoom.
 * Fast: Ikonen för delning via sociala medier visas inte vid den första toningen med Galaxy SIII.
 * Fast: Modala dialogrutor för delning via sociala medier visas inte i helskärmsläge på iPad3.
 * Fast: Modala dialogrutor för delning via sociala medier visas inte i helskärmsläge på Mac med Safari 5.1.
@@ -231,8 +231,8 @@ Se [https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/li
 
 **VideoPlayer**
 
-* Stöd för modifieraren `initialBitRate` har lagts till för att välja den bithastighet som används för den första uppspelningen på skrivbordet.
-* Implementerad iPhone-videoproxy för att åtgärda videoproblem på iPhone-enheter.
+* Stöd för `initialBitRate` modifierare för att välja den bithastighet som används för den första uppspelningen på skrivbordet.
+* iPhone videoproxy har implementerats för att åtgärda videoproblem på iPhone-enheter.
 * Stöd för händelseavlyssnare har lagts till för att pausa uppspelningen när sociala funktioner anropas.
 * Uppspelningsläget som är inställt på auto använder nu den inbyggda spelaren på Safari-skrivbordet.
 * Fast: HTTPS-protokoll genererar en säkerhetsvarning på IE8 med uppspelningen Flash.
@@ -241,10 +241,10 @@ Se [https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/li
 
 **ZoomView**
 
-* Fast: Artefakter som visas när du har zoomat in i bilden eller roterat en enhet på Android.
+* Fast: Artefakter visas när du har zoomat in i bilden eller roterat en enhet på Android™.
 
 ## Nya funktioner och felkorrigeringar i S7OnDemand 5.0.1 {#section-ba3a595134144711bf27dd8dca249e5d}
 
 * Fast: HTTPS-stöd för HTML5- och AS3-visningsprogram.
-* Stöd för responsiv HTML5-visning har lagts till för att bädda in kod.
-* Bädda in kod för HTML5-visningsprogram skickar konfigurationsparametrar som ett enda JSON-objekt.
+* Responsiv support har lagts till för HTML5-visningsprogram som bäddar in kod.
+* Bädda in kod för visningsprogram för HTML5 skickar konfigurationsparametrar som ett enda JSON-objekt.
