--- a/help/s7-release-notes/s7rn69.md
+++ b/help/s7-release-notes/s7rn69.md
@@ -1,24 +1,24 @@
 ---
-description: '"Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.9, som ingår i Adobe Experience Manager-lösningen i Adobe Marketing Cloud."'
-solution: Experience Manager
 title: Versionsinformation om Scene7 Publishing System 6.9 (oktober 2014)
+description: '"Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.9, som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud."'
+solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 5f120925-d387-4bac-8a4d-f67a198b2b8e
-source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '1894'
+source-wordcount: '1869'
 ht-degree: 0%
 
 ---
 
 # Versionsinformation om Scene7 Publishing System 6.9 (oktober 2014){#scene-publishing-system-release-notes-october}
 
-Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och korrigeringarna för Adobe Scene7 Publishing System 6.9 som ingår i Adobe Experience Manager-lösningen i Adobe Marketing Cloud.
+Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och korrigeringarna för Adobe Scene7 Publishing System 6.9 som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud.
 
 ## Versionsinformation om Scene7 Publishing System 6.9 (oktober 2014) {#topic-1d3011ecca71488abe0d8156a9fc1b97}
 
-Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och korrigeringarna för [!DNL Adobe Scene7 Publishing System] 6.9-delen av Adobe Experience Manager-lösningen i [!DNL Adobe Marketing Cloud].
+Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och korrigeringarna för [!DNL Adobe Scene7 Publishing System] 6.9-delen av Adobe Experience Manager-lösningen i [!DNL Adobe Experience Cloud].
 
 * [Scene7 Publishing System 6.9 - i korthet](s7rn69.md#section-2ed72b7902be4509876d81f25b5632ce)
 * [Bildbehandling](s7rn69.md#section-98a61ea9a09940639f357f36969d6e55)
@@ -33,25 +33,25 @@ Den senaste versionsinformationen som beskriver de senaste funktionerna, förbä
 
 I version 6.9 finns ett nytt avancerat visningsprogram för eCatalog, inline zoom viewer, videospelare med mera. Med dessa nya funktioner kan ni utforma och leverera innehållsrika, responsiva, interaktiva upplevelser som ökar konverteringsgraden i alla digitala kanaler.
 
-* ** Advanced eCatalog Viewer** - Med en innehållsförteckning, sidanimering, överlägg med bildkartor och mycket mer kan du nu erbjuda en mer engagerande onlinekatalog och framhäva produkter och tjänster så att kunderna kan länka direkt till sidor som leder till ökad konvertering.
+* ** Advanced eCatalog Viewer** - Med en innehållsförteckning, sidanimering, överlägg med bildscheman med mera kan du nu erbjuda en mer engagerande onlinekatalog. Ni kan markera produkter och tjänster så att kunderna kan länka direkt till sidor som leder till ökad konvertering.
 * ** Ny inline Zoom Viewer** - Möjliggör enkel in-window-zoomning utan några knappklick, så att du kan zooma och ändå behålla synligheten för all produktinformation på sidan.
 * ** Förbättringar av videospelaren** - Färdiga videospelare har nu funktioner för automatisk slinga för kontinuerlig videouppspelning och kapitelnavigering som gör det enkelt att hitta innehåll i långa videor. Mixed Media Video Players har nu stöd för bildtexter för global räckvidd.
 * **Responsiv design** - Optimera kvaliteten på responsiva bildupplevelser ytterligare genom att definiera olika förinställningar eller modifieringar för varje brytpunkt.
-* **Anpassning**  av visningsprogram - Nu kan du dynamiskt ställa in och ändra visningsprogrammets format och beteenden direkt.
-* **Säker förhandsgranskning för Visual Configurator**  - Förhandsgranska och testa visuell återgivning för personaliserade upplevelser på ett säkert sätt innan du sätter dem i produktion.
-* **SSO-kapacitet (Single Sign-On)**  - Nu kan du starta Scene7 från Adobe Marketing Cloud och använda din Adobe ID för att logga in på Scene7.
+* **Anpassning av visningsprogram** - Nu kan du dynamiskt ställa in och ändra visningsprogrammets format och beteenden direkt.
+* **Säker förhandsgranskning för Visual Configurator** - Förhandsgranska och testa visuell återgivning på ett säkert sätt för personaliserade upplevelser innan ni sätter dem i produktion.
+* **Funktion för enkel inloggning** - Nu kan du starta Scene7 från Adobe Experience Cloud utan problem och använda din Adobe ID för att logga in på Scene7.
 
-   Om du vill ha SSO-konfiguration så att du kan använda den med Scene7 kontaktar du Adobe tekniska support. Ha följande information klar så att dina Marketing Cloud- och Scene7-konton kan länkas samman: ditt Adobe Marketing Cloud-organisationsnamn, ditt Scene7-företagsnamn, och din geografiska region.
+   Om du vill ha SSO-konfiguration så att du kan använda den med Scene7 kontaktar du Adobe tekniska support. Ha följande information klar så att dina Experience Cloud- och Scene7-konton kan länkas samman: ditt Adobe Experience Cloud-organisationsnamn, ditt Scene7-företagsnamn, och din geografiska region.
 
 ## Bildbehandling {#section-98a61ea9a09940639f357f36969d6e55}
 
-* **Bättre stöd**  för responsiv redigering - Optimera kvaliteten på responsiv bildhantering ytterligare genom att definiera olika förinställningar eller modifieringar för varje brytpunkt. Se [Använda responsivt statiskt bildbibliotek](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/image-serving-api/image-serving-api/responsive-static-image-library/c-about-responsive-static-image-library.html).
+* **Förbättrat stöd för responsiv support** - Optimera kvaliteten på responsiva bildupplevelser ytterligare genom att definiera olika förinställningar eller modifieringar för varje brytpunkt. Se [Använda responsivt statiskt bildbibliotek](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/image-serving-api/image-serving-api/responsive-static-image-library/c-about-responsive-static-image-library.html).
 
 ## Video {#section-69101b28504543a7ae8a9346d381f913}
 
 * En ny, körklar kodningsförinställning för Adaptiv video som nu fungerar med alla proportioner för att skapa videor som ska skickas till mobiler, surfplattor och datorer. Överförda källvideor som är kodade med den här nya förinställningen har en fast höjd medan bredden automatiskt skalas för att bevara videons proportioner. Se [Videoförinställningar för kodning av videofiler](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/setup/application-setup.html?lang=en#setup).
 * Förbättrad elastisk skalbarhet och prestanda med kodning.
-* Videobildtexter finns nu i `Universal_HTML5_MixedMedia_dark`- och `Universal_HTML5_MixedMedia_light`-visningsprogrammen som är färdiga att användas. Se [Lägga till bildtexter i videon](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/video/adding-captions-video.html#video).
+* Videoklipp finns nu i `Universal_HTML5_MixedMedia_dark` och `Universal_HTML5_MixedMedia_light` tittare. Se [Lägga till bildtexter i video](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/video/adding-captions-video.html#video).
 
 <!-- OBSOLETE ## Web-to-Print {#section-17c5591d279a48d3b0aea085a19d6321}
 
@@ -59,8 +59,8 @@ I version 6.9 finns ett nytt avancerat visningsprogram för eCatalog, inline zoo
 
 ## Plattform {#section-6f0721d6ab10495a927f509f026d70f4}
 
-* Secure Testing for Render Server requests - Secure Testing for core image servassets and video assets is now extended to also include vignettes. Se [Testa resurser innan du publicerar dem](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/upload-publish/testing-assets-making-them-public.html#upload-publish).
-* Övervakning av funktionen för ogiltig CDN-cache - När du har valt en CDN-valideringsmall (se [Allmänna inställningar](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/setup/application-setup.html#general-settings)) och en **[!UICONTROL Invalidate CDN]**-begäran görs på Arkiv-menyn i SPS visas nu en indikator i användargränssnittet som ger dig en uppskattning av hur lång tid det tar att rensa cachen.
+* Secure Testing for Render Server requests - Secure Testing for core image servassets and video assets is now extended to also include vignettes. Se [Testa resurser innan du gör dem offentliga](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/upload-publish/testing-assets-making-them-public.html#upload-publish).
+* Övervakning av funktionen för ogiltig CDN-cache. När du har valt en mall för CDN-validering (se [Allmänna inställningar](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/setup/application-setup.html#general-settings)) och **[!UICONTROL Invalidate CDN]** -begäran görs visas nu en indikator med en uppskattning av hur lång tid det tar att rensa cachen.
 
 ## Tittare {#section-fc0577722d0b431dae3506c8d4e5366f}
 
@@ -68,12 +68,12 @@ I version 6.9 finns ett nytt avancerat visningsprogram för eCatalog, inline zoo
 
 Allmänt
 
-* Komponenter som använder API:t `insertBefore()` använder nu API:t `appendChild()`.
-* Stöd för metoderna `setCSS()`, `setModifier()` och `dispose()` har lagts till.
-* Stöd för metoderna `getWidth()` och `getHeight()` har lagts till.
-* Stöd för metoderna `setPortrait()` och `setLandscape ()` har lagts till.
+* Komponenter som använder `insertBefore()` API används nu `appendChild()` API.
+* Stöd för `setCSS()`, `setModifier()`och `dispose()` metoder.
+* Stöd för `getWidth()`och `getHeight()` metoder.
+* Stöd för `setPortrait()` och `setLandscape ()` metoder.
 * Fixed - IE9: s7sdk.event: PageMouseEvent: klicka och dubbelklicka på händelser som utlöser en krasch i webbläsaren.
-* `TableOfContents`-komponenten har lagts till.
+* Tillagd `TableOfContents` -komponenten.
 
 FlyoutzoomView
 
@@ -90,7 +90,7 @@ MediaSet
 
 * Stöd för anpassade etiketter definierade med lokaliseringssymboler har lagts till.
 * Komponenten har ersatts för förbättrat stöd för komplexa resurser.
-* Stöd för att returnera orienteringsspecifika `MediaSetDesc`-objekt har lagts till.
+* Stöd för återgång till orienteringsspecifika `MediaSetDesc` objekt.
 * Fixed - Imagex visas inte om IS-modifierare med kommatecken läggs till i resurs-ID:t.
 * Fixed - Imagesets: IS-modifierare tillagda till assetID ignoreras.
 
@@ -101,7 +101,7 @@ PageView
 
 SpinView
 
-* Fixed - bilden har flyttats till höger om `DIV` har `text-align:center`-format.
+* Fast - bilden har flyttats till höger om `DIV` har `text-align:center` stil.
 
 Färgrutor
 
@@ -123,7 +123,7 @@ VideoScrubber
 
 ZoomView
 
-* Fixed - bilden har flyttats till höger om `DIV` har `text-align:center`-format.
+* Fast - bilden har flyttats till höger om `DIV` har `text-align:center` stil.
 
 **Felkorrigering för Scene7 OnDemand 5.0.2**
 
@@ -131,45 +131,45 @@ ZoomView
 
 **Nya funktioner, förbättringar och felkorrigeringar för Dynamic Media Image Serving Viewer 5.1.1**
 
-Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i vår staging-miljö. Följande webbplats innehåller instruktioner om hur du kan konfigurera systemet för att få åtkomst till vår mellanlagringsserver:
+Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö. Följande webbplats innehåller anvisningar om hur du konfigurerar systemet för att få åtkomst till Adobe staging-servern:
 
 [https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
 
-När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga HTML5-visningsprogram är det bäst att testa mot vår standardtestserver och s7is1-preview-staging.scene7.com.
+När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga HTML5-visningsprogram är det bästa sättet att testa mot Adobe standardtestserver och s7is1-preview-staging.scene7.com.
 
 Nya funktioner och förbättringar
 
-Se även [Referenshandbok för Scene7-visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
+Se även [Referenshandbok för Scene7 Viewer](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
 
-* Uppdaterat stöd för Internet Explorer 11
-* Ändrade visningsprogram till att använda Spåra begäranden i stället för Spåra sidor för Adobe Analytics
-* Stöd för responsiva bilder har lagts till med bildkommandon och/eller bildförinställningar som baseras på bildens bredd
-* Stöd för att skicka lokaliseringstextsträngar till JSON-argument för HTML5-visningsprogram har lagts till
-* Stöd för inbyggd sidbläddring i HTML5-visningsrutor har lagts till
-* Förbättrat stöd för komplexa resurser och bildmallar för HTML5-visningsprogram
-* Stöd för innehållsförteckning har lagts till i eCatalog-visningsprogrammet för HTML5
-* Stöd för övertäckningar av bildscheman och ikoner i eCatalog i HTML5
-* Stöd för sidvändningsanimering i HTML5 eCatalog-visningsprogrammet har lagts till
-* Stöd för inbyggd sidbläddring i HTML5 eCatalog har lagts till
-* Utökat stöd för att visa smala bilder med hjälp av markeringsmodifiering i HTML5 Flyout Viewer
-* Utökat stöd för att styra uppskalning av bilder med zoomfaktor-modifiering i HTML5 Flyout Viewer
-* Stöd för spårning av händelser som genererats av HTML5 Flyout Viewer har lagts till
-* Stöd för bildtexter för video (endast första videon) i HTML5 MixedMedia Viewer
-* Ökad ursprunglig bithastighet som standard till 1400 för HTML5-video- och MixedMedia-visningsprogram
-* Stöd för uppspelning av loopvideo har lagts till i HTML5 Video Viewer
+* Uppdaterat stöd för Internet Explorer 11.
+* Ändrade visningsprogram att använda `Track requests` i stället för `Page requests` för Adobe Analytics tracking.
+* Stöd för responsiva bilder har lagts till med bildkommandon och/eller bildförinställningar som baseras på bildens bredd.
+* Stöd för att skicka textsträngar för lokalisering till JSON-argument för visningsprogram i HTML5 har lagts till.
+* Stöd för inbyggda sidbläddringar i visningsrutor i HTML5 har lagts till.
+* Förbättrat stöd för komplexa resurser och bildmallar för visningsprogram i HTML5.
+* Stöd för innehållsförteckningar har lagts till i HTML5 eCatalog Viewer.
+* Stöd för övertäckningar av bildscheman och ikoner har lagts till i HTML5 eCatalog.
+* Stöd har lagts till för animering av sidvändning i HTML5 eCatalog Viewer.
+* Stöd för inbyggda sidbläddringar i HTML5 eCatalog har lagts till.
+* Stöd för att visa smala bilder med `highlightmode` modifierare till HTML5-visningsprogram
+* Stöd för att styra uppskalning av bilder med `zoomfactor` modifierare till HTML5-visningsprogram.
+* Stöd för spårning av händelser som genererats av HTML5-visningsprogrammet har lagts till.
+* Stöd för bildtexter för video (endast första videon) har lagts till i MixedMedia Viewer för HTML5.
+* Ökad ursprunglig bithastighet som standard till 1 400 för visningsprogrammen HTML5 Video och MixedMedia.
+* Stöd för uppspelning av video i loopar har lagts till i HTML5 Video Viewer.
 * Stöd för navigeringskapitel har lagts till i HTML5 Video Viewer
 
 Felkorrigeringar
 
-* HTML5 eCatalog Viewer visar inte PageIndicator på iPhone
-* Bilder kan inte visas om Image Serving-modifieraren med kommatecken har lagts till i resurs-ID
-* Bilder: Bildservermodifierare som är tillagda i assetID ignoreras
-* Internet Explorer 9: s7sdk.event: PageMouseEvent: klicka och dubbelklicka på händelser som utlöser en krasch i webbläsaren
-* Internet Explorer 9 och Internet Explorer 10: Visningsprogrammet för eCatalog bryts när bildschemat har aktiverats med JavaScript-mallen
-* HTML5 MixedMedia Viewer: Zoomknappens tillstånd återställs inte när resurstyper byts ut
-* HTML5 MixedMedia Viewer: Visningsprogrammet är komprimerat i svarsläge om den första resursen är 2dspinset
-* Firefox: Brutna bildikoner visas kort när de visas utfällbara tills rutorna har lästs in
-* Knipningsgester genererar inte zoom
+* HTML5 eCatalog Viewer visar inte PageIndicator på iPhone.
+* Bilder kan inte visas om Image Serving-modifieraren med kommatecken har lagts till i resurs-ID:t.
+* Bilder: Image Serving-modifierare som är tillagda i assetID ignoreras.
+* Internet Explorer 9: s7sdk.event: PageMouseEvent: klicka och dubbelklicka på händelser som utlöser en krasch i webbläsaren.
+* Internet Explorer 9 och Internet Explorer 10: Visningsprogrammet för eCatalog bryts när bildschemat har aktiverats med JavaScript-mallen.
+* HTML5 MixedMedia Viewer: Zoomknappens tillstånd återställs inte när resurstyper byts ut.
+* HTML5 MixedMedia Viewer: Visningsprogrammet komprimeras i svarsläge om den första resursen är 2dspinset.
+* Firefox: Brutna bildikoner visas som en kort fras tills rutorna läses in.
+* Knipningsgester genererar inte zoom.
 * eCatalog: Bilder: JavaScript-fel med relativa länkar
 
 Kända fel och begränsningar
@@ -186,46 +186,46 @@ HTML5-alla visningsprogram
 * Beskärning av bildserverkommando stöds inte.
 * Knappen Stäng fungerar bara om visningsprogrammet är öppet i ett underordnat fönster.
 * Iscommands-modifieraren stöder inte Image Serving-modifierare som påverkar bildstorleken.
-* CSS-format&quot;display: none i DIV-behållare stöds inte för närvarande. Detta inkluderar jQuery hide()-metoden.
+* CSS-format&quot;display: none i DIV-behållare stöds inte för närvarande. Innehåller metoden jQuery hide().
 
-Visningsprogram för HTML5 eCatalog
+HTML5 eCatalog-visningsprogram
 
 * Om du navigerar till en annan HTML-sida och sedan återgår till den första sidan återställs visningsprogrammet ibland.
 * Sidlayouten visas ibland felaktigt efter att iOS-enheten har roterats. Zooma in på sidan korrigerar layouten.
 * Interna länkar endast till den vänstra sidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
 * InitalFrame länkar endast till den vänstra sidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
 
-HTML5 Mixed Media Viewer
+HTML5 visningsprogram för blandade media
 
 * Ljudspårets uppspelning stöds inte.
 
 HTML5 Social Viewer
 
-* För att återge miniatyrbilder korrekt i utgående e-post bör modifieraren `serverurl` ha en absolut URL.
+* Om du vill återge miniatyrbilder korrekt i utgående e-post väljer du `serverurl` modifierare ska ha en absolut URL.
 
 HTML5 Video Viewer
 
-* Posterbilden kan ha ett fel av typen &quot;max size&quot;. Därför kan du behöva öka gränsvärdet för Image Serving Publish.
-* Bildtexter för video kräver en företagsregeluppsättning om de är värd för en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support för att få hjälp.
-* Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring
-* Svart bildruta i stället för förhandsvisningsbild kan visas på iPad- eller Android-enheter.
-* Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android-enheter.
-* Svarta kantlinjer visas på sidan om VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig på iPad-enheter.
-* Den sista bildrutan i videon kan förvrängas på iPad med iOS 7.
+* Posterbilden kan ha ett fel av typen &quot;max size&quot;. Därför måste du öka gränsvärdet för Image Serving Publish.
+* Bildtexter för videofilmer kräver en företagsregeluppsättning om de har en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support för att få hjälp.
+* Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
+* Svarta bildrutor i stället för förhandsvisningsbilder kan visas på iPad- eller Android™-enheter.
+* Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android™-enheter.
+* Svarta kantlinjer visas bredvid VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig på iPad-enheter.
+* Den sista videobildrutan kan förvrängas i iPad med iOS 7.
 
 ## Felkorrigeringar för Scene7 Publishing System 6.9 {#section-86dc0e8eb85241dbb449221becb12888}
 
 * Det totala antalet exporterade resurser visar sig vara ett större än det ursprungliga antalet i informationen om exportjobbloggen.
 * I den genererade förinställningen 1d-spin per batchuppsättning ska den bara visa varningen en gång när redigeraren för snurra uppsättning öppnas.
-* Det går inte att förhandsgranska färdiga HTML5 Video Viewer-förinställningar.
+* Det går inte att förhandsgranska förinställningar för HTML5-videovisningsprogrammet som är färdiga att användas.
 * Scene7 Publishing System fortsatte att minnas gruppen, även om regeln skrevs om.
 * I Scene7 Publishing System visades inte viss kod för reguljära uttryck för en upprepning korrekt.
 * Alla förinställningar för gruppuppsättningar används när de överförs, om ingen av förinställningarna har valts.
 
 ## Funktioner som inte längre stöds {#section-b061ad3d170a45ee8e694f997fd5d8ef}
 
-* Scene7 Creative Suite Extensions används inte i den här versionen eftersom Creative Cloud Application har inaktiverat stöd för Flash-panelerna. Ytterligare utveckling av arbetsflöden för innehållskonsumtion fokuserar på Adobe Experience Manager Dynamic Media och Creative Cloud. För Scene7 finns överförings- och exportfunktionerna i Scene7 Publishing System kvar och kan användas i stället.
+* Scene7 Creative Suite Extensions används inte i den här versionen eftersom Creative Cloud Application har inaktiverat stöd för Flash-panelerna. Ytterligare utveckling av arbetsflödena för innehållskonsumtion fokuserar på Adobe Experience Manager Dynamic Media och Creative Cloud. För Scene7 finns överförings- och exportfunktionerna i Scene7 Publishing System kvar och kan användas i stället.
 * UGC-video har tagits bort i den här versionen på grund av låg användning. Om du konfigurerar ett annat SPS-konto kan det fungera som en ersättningslösning för UGC-video. Kontakta Adobe tekniska support om du vill ha ett annat konto konfigurerat.
 * Textavstavning används inte i den här versionen på grund av begränsad användning. Avstavningsordlistorna definierar hur ord kan delas upp och avstavas för ett optimalt textflöde.
-* Metadata Server och Likhetssökning kommer båda att bli inaktuella under 2015 på grund av begränsad användning. När det officiella måldatumet för borttagning tillkännages kommer berörda kunder att meddelas av Adobe tekniska support.
+* Metadata Server och Likhetssökning togs bort 2015 på grund av låg användning. När det officiella måldatumet för borttagning av gamla kunder annonserades av Adobe Technical Support.
 * Påminnelse: Från och med den 31 januari 2014 upphörde Scene7 officiellt stödet för DHTML-visningsprogramplattformen.
