--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-29-14.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-29-14.md
@@ -1,13 +1,13 @@
 ---
+title: Versionsinformation om Scene7 Viewer 5.0.1
 description: Versionsinformation om Scene7 Viewer 5.0.1
 solution: Experience Manager
-title: Versionsinformation om Scene7 Viewer 5.0.1
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 308f5ebf-dd28-4f95-abca-24cc6c212bf4
-source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '929'
+source-wordcount: '926'
 ht-degree: 0%
 
 ---
@@ -16,11 +16,11 @@ ht-degree: 0%
 
 ## Adobe Scene7 Viewers {#section-0b0363fae0274737bace119f281e740f}
 
-Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i vår staging-miljö. Följande webbplats innehåller instruktioner om hur du kan konfigurera systemet för att få åtkomst till vår mellanlagringsserver:
+Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö. Följande webbplats innehåller anvisningar om hur du konfigurerar systemet för att få åtkomst till Adobe staging-servern:
 
 [https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
 
-När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga visningsprogram bör du testa mot vår standardtestserver och s7is1-preview-staging.scene7.com.
+När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga visningsprogram bör du testa mot Adobe standardstaging-server och s7is1-preview-staging.scene7.com.
 
 ## Nya funktioner och ändringar {#section-405e47e202e54943bd843d82415c91cb}
 
@@ -28,7 +28,7 @@ Följande har uppdaterats:
 
 * Lägsta systemkrav för Windows är nu Windows 7.
 * Lägsta systemkrav för Internet Explorer är nu version 9.
-* Lägsta systemkrav för Mac OS är nu Mac OS 10.8.
+* Lägsta systemkrav för macOS är nu macOS 10.8.
 * Lägsta systemkrav för Safari är nu version 6.
 
 Följande har omarbetats:
@@ -40,9 +40,9 @@ Följande stöds nu:
 
 * Adobe Analytics videorapporter till Video Viewer och Mixed Media Viewer.
 * Händelsespårning för flera visningsprogram på samma sida.
-* `SetIndicator` har lagts till i Video Viewer och Mixed Media Viewer för att visuellt representera färgrutor på mobila enheter.
-* `SetIndicator` har lagts till i MixedMediaViewer för att visuellt representera färgrutor på mobilen.
-* `getComponent` API har lagts till för att tillåta extern åtkomst till visningsprogramkomponenter.
+* Tillagd `SetIndicator` till Video Viewer och Mixed Media Viewer för att visuellt representera färgrutor på mobila enheter.
+* Tillagd `SetIndicator` till MixedMediaViewer för att visuellt representera färgrutor på mobilen.
+* Tillagd `getComponent` API som tillåter extern åtkomst till visningsprogramkomponenter.
 * visningsprogram för konfigurationsparametrar som ska skickas som ett enda JSON-objekt.
 * WebVTT-bildtexter skickas som JSON-objekt, vilket eliminerar behovet av regeluppsättningskonfiguration.
 * JavaScript-mallar i eCatalog Viewer för länkning av bildscheman till externa sidor.
@@ -55,10 +55,10 @@ Följande stöds nu:
 * FlyoutZoomView för inställning av brytpunkter för inläsning av bilder vid användning för responsiv design.
 * Klickstöd för volymjustering har lagts till.
 * SpinView och ZoomView använder gester för att bädda in webbsidor utan att interagera med visningsprogrammet.
-* `unload()` API har lagts till i SpinView och ZoomView för att tillåta kassering av komponenten vid körning.
+* Tillagd `unload()` API till SpinView och ZoomView för att tillåta kassering av komponenten vid körning.
 * Video Viewer för att använda gester på den inbäddade webbsidan när den inte interagerar med visningsprogrammet.
 * ZoomView för det inledande zoomområdet.
-* ZoomView om du vill dölja `IconEffect`-komponenten när zoomning inte är möjlig
+* ZoomView för att dölja `IconEffect` -komponent när zoomning inte är möjlig.
 
 Följande fel har korrigerats:
 
@@ -68,7 +68,7 @@ Följande fel har korrigerats:
 * Video Viewer förhindrar åtkomst till att ta bort blockeringen av plugin-programmet för Flash.
 * -visningsprogram förhindrar utskrift i Firefox-webbläsare.
 * I Video Viewer visas en viss darr när zoomningen initieras eller återställs.
-* HTTPS-stöd för HTML5- och AS3-visningsprogram.
+* HTTPS-stöd för visningsprogram i HTML5 och AS3.
 
 Följande togs bort:
 
@@ -90,35 +90,33 @@ Följande togs bort:
 
 **Adobe Analytics Training**
 
-* När du använder Scene7-visningsprogram med Adobe Analytics tracking baserat på s_code.jsp skickas&quot;page&quot;-begäranden i stället för&quot;track&quot;-begäranden för alla spårade händelser. Detta resulterar i alltför stora sidvisningsvärden för sidor som innehåller ett Scene7-visningsprogram. Åtgärda problemet genom att kopiera innehållet i AppMeasurementBridge.jsp till en Javascript-fil som ska visas på visningsprogramsidan. I det resulterande Javascript-objektet ersätts alla anrop till s.t() med s.tl() för alla händelser utom händelsen LOAD. Problemet påverkar inte Scene7 videovisningsprogram som använder Adobe Analytics nya rapport om pulsslag.
+* När du använder Dynamic Media-visningsprogram med Adobe Analytics tracking baserat på `s_code.jsp`, skickas&quot;page&quot;-förfrågningar i stället för&quot;track&quot;-förfrågningar för alla spårade händelser. Den här processen resulterar i alltför stora sidvisningsvärden för sidor som innehåller ett Dynamic Media-visningsprogram. Åtgärda problemet genom att kopiera innehållet i AppMeasurementBridge.jsp till en JavaScript-fil som ska visas på visningsprogramsidan. Ersätt alla anrop i det resulterande JavaScript-skriptet till `s.t()` med `s.tl()` för alla händelser utom LOAD-händelsen. Problemet påverkar inte Scene7 videovisningsprogram som använder Adobe Analytics nya rapport om pulsslag.
 * Internet Explorer: JavaScript-felet&quot;Åtkomst nekas&quot; inträffar med SSL/HTTPS med Adobe Analytics tracking aktiverat.
 
 **eCatalog-visningsprogram**
 
 * JavaScript-mallar i bildscheman stöds inte.
 * Om du navigerar till en annan HTML-sida och sedan återgår till den första sidan återställs visningsprogrammet ibland.
-* Ange `ImageMapEffect` rollover modifier till `1` för att anropa infopanels.
-
-* `Frametransition` inställd på  `none` eller  `fade` stöds inte.
-
+* Ange `ImageMapEffect` rollover modifier to `1` för att anropa informationspaneler.
+* `Frametransition` ange till `none` eller `fade` stöds inte.
 * Sidlayouten visas ibland felaktigt efter att iOS-enheten har roterats. Zooma in på sidan korrigerar layouten.
 * Interna länkar endast till den vänstra sidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
 * InitalFrame länkar endast till den vänstra sidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
 
 **Visningsprogram för blandade media**
 
-* Ljudspårets uppspelning stöds inte just nu.
+* Ljudspårets uppspelning stöds inte för närvarande.
 
 **Social visningsprogram**
 
-* För att återge miniatyrbilder korrekt i utgående e-post bör modifieraren `serverurl` ha en absolut URL.
+* Om du vill återge miniatyrbilder korrekt i utgående e-post väljer du `serverurl` modifierare måste ha en absolut URL.
 
 **Videovisningsprogram**
 
-* Posterbilden kan ha felet &quot;max size&quot;. Användaren kan behöva öka gränsvärdet för Image Serving Publish.
-* Bildtexter för video kräver en företagsregeluppsättning om de är värd för en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support för att få hjälp.
-* Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring
-* Svart bildruta i stället för förhandsvisningsbild kan visas på iPad- eller Android-enheter.
-* Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android-enheter.
-* Svarta kantlinjer visas på sidan om VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig på iPad-enheter.
-* Den sista bildrutan i videon kan förvrängas på iPad med iOS 7.
+* Posterbilden kan ha felet &quot;max size&quot;. I så fall måste användaren öka gränsvärdet för Image Serving Publish.
+* Bildtexter för videofilmer kräver en företagsregeluppsättning om de har en HTML-sida som hanteras från en extern server som inte är en Scene7-server. Kontakta Adobe tekniska support för att få hjälp.
+* Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
+* Svarta bildrutor i stället för förhandsvisningsbilder kan visas på iPad- eller Android™-enheter.
+* Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android™-enheter.
+* Svarta kantlinjer visas bredvid VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig på iPad-enheter.
+* Den sista videobildrutan kan förvrängas i iPad med iOS 7.
