--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-20-15.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-20-15.md
@@ -1,13 +1,13 @@
 ---
+title: Versionsinformation om Scene7 Viewer 5.2.3
 description: Versionsinformation om Scene7 Viewer 5.2.3
 solution: Experience Manager
-title: Versionsinformation om Scene7 Viewer 5.2.3
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 3008cdf7-7bc3-4e68-910d-5dbd1db41f8a
-source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '861'
+source-wordcount: '856'
 ht-degree: 0%
 
 ---
@@ -16,16 +16,16 @@ ht-degree: 0%
 
 ## Adobe Scene7 Viewers {#section-0b0363fae0274737bace119f281e740f}
 
-Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i vår staging-miljö. Följande webbplats innehåller instruktioner om hur du kan konfigurera systemet för att få åtkomst till vår mellanlagringsserver:
+Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö. Följande webbplats innehåller anvisningar om hur du konfigurerar systemet för att få åtkomst till Adobe staging-servern:
 
 [https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
 
-När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga visningsprogram bör du testa mot vår standardtestserver och s7is1-preview-staging.scene7.com.
+När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga visningsprogram bör du testa mot Adobe standardstaging-server och s7is1-preview-staging.scene7.com.
 
-**VIKTIGT:** Den senaste versionen av Firefox förhindrar nu att plugin-programmet Adobe Flash körs på webbplatser som standard. Om du har distribuerat den Scene7 videospelare som använder plugin-programmet Adobe Flash på stationära datorer har du följande tre alternativ:
+**VIKTIGT!** Den senaste versionen av Firefox förhindrar nu att plugin-programmet Adobe Flash körs på webbplatser som standard. Om du har distribuerat den Scene7 videospelare som använder plugin-programmet Adobe Flash på stationära datorer har du följande tre alternativ:
 
 * Användarna ser en uppmaning högst upp på webbsidan som de visar i Firefox. I uppmaningen kan de antingen välja att fortsätta blockera plugin-programmet eller tillåta att plugin-programmet körs, och då spelas videon upp som vanligt.
-* Ställ in videospelaren på `playback=native`-läge. Då spelas MP4-videon upp progressivt.
+* Ställ in videospelaren på `playback=native` läge. Då spelas MP4-videon upp progressivt.
 
    Se [VideoPlayer.playback](../../c-html5-s7-aem-asset-viewers/c-html5-video-reference/c-html5-video-cmdref/r-html5-video-viewer-conf-attrib-videoplayer-playback.md#reference-13ec45db4cd4443b842f310153623221).
 
@@ -53,36 +53,36 @@ Adobe undersöker alternativ för att åtgärda detta problem i Firefox i en fra
 
 * Galaxy S4 - stående läge: Felaktig CSS-storleksmarkör när helskärmsläge är aktiverat
 * Internet Explorer 9 och Internet Explorer 10 - Zoom fungerar felaktigt om width-egenskapen definieras för IMG i CSS.
-* [Bildscheman ] för eCatalogImage fastnar när JavaScript-mallar används för extern länkning i Internet Explorer 9.
+* [eCatalog] Bildscheman fastnar när JavaScript-mallar används för extern länkning i Internet Explorer 9.
 
 ## Kända fel och begränsningar för 5.2.2 {#section-368dd0dc138b44e28b49314e4ad0fa1a}
 
-* Modifierare för bildservering från iscommands läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
+* Funktionsändringstangenterna för bildservering från iscommands läggs inte till i `req=set` förfrågan efter design. Modifierare som bara påverkar bildvisningen fungerar bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
 
    ```
    https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}
    ```
 
-* iPad - Manuella uppsättningar kan inte visas i webbläsaren Chrome
+* iPad - Manuella uppsättningar kan inte visas i webbläsaren Chrome.
 * Flyout - Internet Explorer 9 finns ibland kvar på skärmen när musen är avstängd.
 * ZoomViewer - Det går inte att zooma en bild genom att klicka med musen (Windows 8, pekskärm, Chrome).
 * Webbläsarskalning leder till fel storleksändring.
-* iPad 2 - Big eCatalog-resurs kraschar Safari på iOS
+* iPad 2 - Large eCatalog asset kraschar Safari på IOS.
 
 **Alla Scene7-visningsprogram**
 
 * Vattenstämplar, förvrängning och låsning stöds inte.
 * Bildförinställningar stöds inte.
-* Det går inte att lägga till eller ta bort visningsprogrammet från DOM med `display:none` CSS eller genom att dynamiskt koppla loss det från den överordnade noden.
+* Lägga till eller ta bort visningsprogram från DOM med `display:none` CSS eller genom att dynamiskt koppla loss den från den överordnade noden stöds inte.
 
 **Alla visningsprogram**
 
-* Om du bäddar in visningsprogrammet i en tabell kan visningsprogrammets storlek eller placering bli felaktig i icke-ursprungligt helskärmsläge. Använd `DIV`s i stället.
+* Om du bäddar in visningsprogrammet i en tabell kan visningsprogrammets storlek eller placering bli felaktig i icke-ursprungligt helskärmsläge. Använd `DIV`s istället.
 * Parametrar med explicita instansnamn i koden kräver också att instansnamn i URL:en skrivs över. Exempel, `zoomView.iconeffect=0`.
 * Beskärning av bildserverkommando stöds inte.
 * Knappen Stäng fungerar bara om visningsprogrammet är öppet i ett underordnat fönster.
 * Iscommands-modifieraren stöder inte Image Serving-modifierare som påverkar bildstorleken.
-* CSS-formatet `display:none` i `DIV`-behållaren stöds inte. Detta inkluderar Jquery `hide()`-metod.
+* CSS-format `display:none` på `DIV` container is not supported. Inkluderar Jquery `hide()` -metod.
 
 **eCatalog-visningsprogram**
 
@@ -98,14 +98,14 @@ Adobe undersöker alternativ för att åtgärda detta problem i Firefox i en fra
 
 **Social visningsprogram**
 
-* För att miniatyrerna ska kunna återges korrekt i utgående e-post måste modifieraren `serverurl` använda en absolut URL.
+* Om du vill återge miniatyrbilder korrekt i utgående e-post väljer du `serverurl` modifierare måste använda en absolut URL.
 
 **Videovisningsprogram**
 
-* Posterbilden kan ha felet &quot;max size&quot;. Användaren kan behöva öka gränsvärdet för Image Serving Publish.
-* Bildtexter för video kräver en företagsregeluppsättning om de är värd för en HTML-sida som hanteras från en extern server som inte är en Dynamic Media-server. Kontakta Adobe tekniska support för att få hjälp.
-* Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring
-* Svart bildruta i stället för förhandsvisningsbild kan visas på iPad- eller Android-enheter.
-* Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android-enheter.
-* Svarta kantlinjer visas på sidan om VideoPlayer-komponenten när bakgrunden är inställd på vit eller genomskinlig på iPad-enheter.
-* Den sista bildrutan i videon kan förvrängas på iPad med iOS 7.
+* Posterbilden kan ha felet &quot;max size&quot;. Användaren måste öka gränsvärdet för Image Serving Publish.
+* Bildtexter för videofilmer kräver en företagsregeluppsättning om de har en HTML-sida som hanteras från en extern server som inte är en Dynamic Media-server. Kontakta Adobe tekniska support för att få hjälp.
+* Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
+* Svarta bildrutor i stället för förhandsvisningsbilder kan visas på iPad- eller Android™-enheter.
+* Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android™-enheter.
+* Svarta kantlinjer visas bredvid VideoPlayer-komponenten när bakgrunden är vit eller genomskinlig på iPad-enheter.
+* Den sista videobildrutan kan förvrängas i iPad med iOS 7.
