--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-08-19.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-08-19.md
@@ -1,11 +1,11 @@
 ---
+title: Versionsinformation för visningsprogram (5.13.1)
 description: Versionsinformation för visningsprogram (5.13.1)
 solution: Experience Manager
-title: Versionsinformation för visningsprogram (5.13.1)
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 266805aa-29a6-4e95-a7b8-43d95beeea36
-source-git-commit: c99aac44711852d8ac661878e11ce0b19d3dbf60
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
 source-wordcount: '554'
 ht-degree: 0%
@@ -50,16 +50,16 @@ Paketet innehåller följande:
 
 * Stöd för integrering med Adobe Launch Dynamic Media Viewers-tillägget har lagts till.
 * Stöd för VR-funktionsläge har lagts till i Oculus Browser för Video360Viewer.
-* `RolloverKeyEvent.HREF_ACTIVATED`-händelse har lagts till för att tillåta klientkoden att svara på aktivering av bildscheman i eCatalogViewer och eCatalogSearchViewer.
+* Tillagd `RolloverKeyEvent.HREF_ACTIVATED` händelse som tillåter att klientkoden svarar på aktivering av bildscheman i eCatalogViewer och eCatalogSearchViewer.
 
 ## Felkorrigeringar för 5.13.1 {#section-50e7ea1e01dd4e1fa9c8b3e00eb002b4}
 
 * Korrigerade felaktiga långtidsskärmar.
-* Löste problem med helskärmsläge där sidan rullades på Apple-enheter (körs på iOS 12 och senare).
+* Löste problem med helskärmsläge där sidan rullades på Apple-enheter (som körs på iOS 12 och senare).
 
 ## Kända fel och begränsningar för 5.13.1 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* Modifierare för bildservering från IS-kommandon läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
+* Funktionsändringstangenterna för bildservrar från IS läggs inte till i `req=set` förfrågan efter design. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
 
    `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
 
@@ -70,39 +70,39 @@ Paketet innehåller följande:
 
 * Vattenstämplar, förvrängning och låsning stöds inte.
 * Bildförinställningar stöds inte.
-* Det går inte att lägga till eller ta bort visningsprogrammet från DOM med `display:none` CSS eller genom att dynamiskt koppla loss det från den överordnade noden.
+* Lägga till eller ta bort visningsprogram från DOM med `display:none` CSS eller genom att dynamiskt koppla loss den från den överordnade noden stöds inte.
 
-**HTML5 - alla visningsprogram**
+**HTML5 alla visningsprogram**
 
 * Om du bäddar in ett visningsprogram i en tabell kan visningsprogrammets storlek eller placering bli felaktig i icke-ursprungligt helskärmsläge. Adobe rekommenderar att du använder DIV i stället.
 * Parametrar med explicita instansnamn i koden kräver att instansnamn i URL:en också skrivs över (till exempel `zoomView.iconfeffect=0`).
-* Bildserverkommandot `crop` stöds inte.
+* Bildredigering, kommando `crop` stöds inte.
 * Knappen Stäng fungerar bara om visningsprogrammet är öppet i ett underordnat fönster.
 * IS-kommandomodifieraren stöder inte Image Serving-modifierare som påverkar bildstorleken.
 
 **HTML5 eCatalog**
 
-* Om du navigerar till en annan HTML-sida och sedan återgår till den första sidan återställs visningsprogrammet ibland.
+* Om du navigerar till en annan HTML-sida och sedan återgår till den andra sidan återställs visningsprogrammet till den första sidan.
 * Sidlayouten visas ibland felaktigt efter att iOS-enheten har roterats. När du zoomar in på sidan korrigeras layouten.
 * Interna länkar endast till den vänstra sidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
 
-**Blandade HTML5-media**
+**HTML5 blandade media**
 
 * Ljudspårets uppspelning stöds inte.
 
 **HTML5 Social**
 
-* För att miniatyrerna ska kunna återges korrekt i utgående e-post måste modifieraren `serverurl` ha en absolut URL.
+* Om du vill återge miniatyrbilder korrekt i utgående e-post väljer du `serverurl` modifierare måste ha en absolut URL.
 
 **HTML5-video**
 
-* Det kan uppstå ett `max size`-fel i förhandsvisningsbilden. I så fall måste du öka gränsvärdet för Image Serving Publish.
-* Videobeskrivningar kräver en företagsregeluppsättning om HTML-värdsidan hanteras från en extern server (inte en Dynamic Media-server). Kontakta teknisk support.
+* Posterbilden kan träffa på en `max size` fel. I så fall måste du öka gränsvärdet för Image Serving Publish.
+* Videobeskrivningar kräver en företagsregeluppsättning om värdsidan för HTML hanteras från en extern server (inte en Dynamic Media-server). Kontakta teknisk support.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
 * På iPad- eller Android™-enheter kan en svart ram visas i stället för en förhandsvisningsbild.
-* På iPad- eller Android™-enheter kan en svart bildruta blinka på skärmen när visningsprogrammet läses in.
-* På iPad-enheter visas svarta kanter på sidan av VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig.
+* På iPad- eller Android™-enheter kan en svart bildruta blinka på skärmen under inläsningen av visningsprogrammet.
+* På iPad-enheter visas svarta kantlinjer på sidan om VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig.
 * I iPad kan den sista videobildrutan förvrängas med iOS 7.
 * I Chrome-, Firefox- och Internet Explorer-webbläsare kan det förekomma makroblockering vid videosökning i HLS-direktuppspelningsläge.
-* Affischbilden kanske inte visas i webbläsaren Microsoft® Edge för första gången.
+* Affischbilden kanske inte visas i Microsoft® Edge-webbläsaren för första gången.
 * När progressiv uppspelning används kan förhandsvisningsbilden döljas efter att videon har lästs in i Internet Explorer 9.
