--- a/help/aem-viewers-ref/c-release-notes/c-rn-04-06-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-rn-04-06-21.md
@@ -4,12 +4,10 @@ description: Versionsinformation för visningsprogram för Adobe Dynamic Media.
 solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
-hide: true
-hidefromtoc: true
 robots: noindex
 googlebot: noindex
 exl-id: 636c8c11-9c79-41f3-8101-29fca0fab074
-source-git-commit: c99aac44711852d8ac661878e11ce0b19d3dbf60
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
 source-wordcount: '621'
 ht-degree: 0%
@@ -18,11 +16,13 @@ ht-degree: 0%
 
 # Versionsinformation för visningsprogram (5.16.1){#viewers-release-notes}
 
-<!-- Updated April 06, 2021 for the 5.16.1 release-->
+<!-- Updated April 06, 2021 for the 5.16.1 release
+hide: yes
+hidefromtoc: yes-->
 
 >[!IMPORTANT]
 >
->Viewers 5.16.1 är en *planerad*-version som endast är tillgänglig på Förproduktion för tillfället.
+>Viewers 5.16.1 är en *planerad* som endast är tillgänglig på mellanlagring för tillfället.
 
 ## Adobe Dynamic Media Viewers {#section-5460f4e254d44c5a95196e6cb657b7e4}
 
@@ -50,7 +50,7 @@ Paketet innehåller följande:
    * Video360Viewer
    * ZoomVerticalViewer
 
-* **HTML5-visningsprogram endast**  för mobiler (äldre, med 3.10 s7sdk)
+* **HTML5-visningsprogram endast för mobiler** (äldre, använda 3.10 s7sdk)
 
    * basicZoomMobile
    * utfällbar
@@ -65,15 +65,15 @@ Paketet innehåller följande:
 * Uppdaterad produktprofilering för Adobe Experience Viewer.
 * Fast tangentbordsnavigering i listrutan SocialShare när en av underkomponenterna är inaktiverad i CSS.
 * Korrigerat JavaScript-fel vid användning av förhandsgranskning på iOS9 och äldre enheter.
-* Korrigerad felaktig rapportering av den aktuella videouppspelningstiden som NaN.<!--  (CQ-4310148) -->
+* Korrigerade felaktig rapportering av den aktuella videouppspelningstiden som NaN.<!--  (CQ-4310148) -->
 
 ## Adobe kundtjänst {#customer-care}
 
-Se [Stöd](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html#intro).
+Se [Support](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html#intro).
 
 ## Kända fel och begränsningar {#known-issues-and-restrictions}
 
-* Modifierare för bildservering från IS-kommandon läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
+* Funktionsändringstangenterna för bildservrar från IS läggs inte till i `req=set` förfrågan efter design. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Exempel:
 
    `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
 
@@ -84,39 +84,39 @@ Se [Stöd](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/i
 
 * Vattenstämplar, förvrängning och låsning stöds inte.
 * Bildförinställningar stöds inte.
-* Det går inte att lägga till eller ta bort visningsprogrammet från DOM med `display:none` CSS eller genom att dynamiskt koppla loss det från den överordnade noden.
+* Lägga till eller ta bort visningsprogram från DOM med `display:none` CSS eller genom att dynamiskt koppla loss den från den överordnade noden stöds inte.
 
-### HTML5 - alla visningsprogram {#html5-all-viewers}
+### HTML5 alla visningsprogram {#html5-all-viewers}
 
 * Om du bäddar in ett visningsprogram i en tabell kan visningsprogrammets storlek eller placering bli felaktig i icke-ursprungligt helskärmsläge. Adobe rekommenderar att du använder DIV i stället.
 * Parametrar med explicita instansnamn i koden kräver att instansnamn i URL:en också skrivs över (till exempel `zoomView.iconfeffect=0`).
-* Bildserverkommandot `crop` stöds inte.
+* Bildredigering, kommando `crop` stöds inte.
 * Knappen Stäng fungerar bara om visningsprogrammet är öppet i ett underordnat fönster.
 * IS-kommandomodifieraren stöder inte Image Serving-modifierare som påverkar bildstorleken.
 
 ### HTML5 eCatalog {#html5-ecatalog}
 
-* Om du navigerar till en annan HTML-sida och sedan återgår till den första sidan återställs visningsprogrammet ibland.
+* Om du navigerar till en annan HTML-sida och sedan återgår till den andra sidan återställs visningsprogrammet till den första sidan.
 * Sidlayouten visas ibland felaktigt efter att iOS-enheten har roterats. När du zoomar in på sidan korrigeras layouten.
 * Interna länkar endast till den vänstra sidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
 
-### Blandade HTML5-media {#html5-mixed-media}
+### HTML5 blandade media {#html5-mixed-media}
 
 * Ljudspårets uppspelning stöds inte.
 
 ### HTML5 Social {#html5-social}
 
-* För att miniatyrerna ska kunna återges korrekt i utgående e-post måste modifieraren `serverurl` ha en absolut URL.
+* Om du vill återge miniatyrbilder korrekt i utgående e-post väljer du `serverurl` modifierare måste ha en absolut URL.
 
 ### HTML5-video {#html5-video}
 
-* Det kan uppstå ett `max size`-fel i förhandsvisningsbilden. Öka gränsvärdet för Image Serving Publish.
-* Videobeskrivningar kräver en företagsregeluppsättning om HTML-värdsidan hanteras från en extern server (inte en Dynamic Media-server). Kontakta [Adobe kundtjänst](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html#intro) om du behöver hjälp.
+* Posterbilden kan träffa på en `max size` fel. Öka gränsvärdet för Image Serving Publish.
+* Videobeskrivningar kräver en företagsregeluppsättning om värdsidan för HTML hanteras från en extern server (inte en Dynamic Media-server). Kontakt [Adobe kundtjänst](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html#intro) om du behöver hjälp.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
-* På iPad- eller Android™-enheter visas en svart ram i stället för en förhandsvisningsbild.
+* På iPad- eller Android™-enheter visas en svart bildruta i stället för en förhandsvisningsbild.
 * På iPad- eller Android™-enheter blinkar en svart bildruta på skärmen när visningsprogrammet läses in.
-* På iPad-enheter visas svarta kanter på sidan av VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig.
+* På iPad-enheter visas svarta kantlinjer på sidan om VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig.
 * I iPad förvrängs den sista videobildrutan med iOS 7.
 * I Chrome-, Firefox- och Internet Explorer-webbläsare uppstår ibland makroblockering vid videosökning i HLS-direktuppspelningsläge.
-* Affischbilden visas inte i webbläsaren Microsoft® Edge för första gången.
+* Affischbilden visas inte i Microsoft® Edge-webbläsaren för första gången.
 * När progressiv uppspelning används döljs förhandsvisningsbilden när videon har lästs in i Internet Explorer 9.
