--- a/help/s7-release-notes/s7rn610.md
+++ b/help/s7-release-notes/s7rn610.md
@@ -1,11 +1,11 @@
 ---
 title: Versionsinformation om Scene7 Publishing System 6.10 (maj 2015)
-description: '"Den senaste versionsinformationen som beskriver de nya funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.10, en del av Adobe Experience Manager-lösningen i Adobe Marketing Cloud."'
+description: '"Den senaste versionsinformationen som beskriver de nya funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.10, en del av Adobe Experience Manager-lösningen i Adobe Experience Cloud."'
 solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: dd998249-1986-491f-b0ab-554ab414f602
-source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
 source-wordcount: '2295'
 ht-degree: 0%
@@ -14,11 +14,11 @@ ht-degree: 0%
 
 # Versionsinformation om Scene7 Publishing System 6.10 (maj 2015){#scene-publishing-system-release-notes-may}
 
-Den senaste versionsinformationen som beskriver nya funktioner, förbättringar och korrigeringar för Adobe Scene7 Publishing System 6.10 som ingår i Adobe Experience Manager-lösningen i Adobe Marketing Cloud.
+Den senaste versionsinformationen som beskriver nya funktioner, förbättringar och korrigeringar för Adobe Scene7 Publishing System 6.10 som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud.
 
 ## Versionsinformation om Scene7 Publishing System 6.10 (maj 2015) {#topic-be8b44aea42643c496452726d4550226}
 
-Den senaste versionsinformationen som beskriver de nya funktionerna, förbättringarna och korrigeringarna för [!DNL Adobe Scene7 Publishing System] 6.10-delen av [!DNL Adobe Experience Manager]-lösningen i [!DNL Adobe Marketing Cloud].
+Den senaste versionsinformationen som beskriver de nya funktionerna, förbättringarna och korrigeringarna för [!DNL Adobe Scene7 Publishing System] 6,10-delar av [!DNL Adobe Experience Manager] lösningen i [!DNL Adobe Experience Cloud].
 
 * [Scene7 Publishing System 6.10 - i korthet](s7rn610.md#section-d2c3b12e392446868eba029cbe13c06b)
 * [Scene7 IPS (Image Production System) 4.5.0](s7rn610.md#section-3e37ed37b6d146419f4578bd7ffeaa74)
@@ -30,131 +30,131 @@ Den senaste versionsinformationen som beskriver de nya funktionerna, förbättri
 
 Med version 6.10 kan ni designa och leverera engagerande, interaktiva upplevelser som ökar konverteringsgraden i alla digitala kanaler.
 
-* **Söktyp**  - Möjlighet att lägga till företagsegenskap för att tillåta standard för personlig söktyp  **[!UICONTROL Contains]**.
+* **Söktyp** - Möjlighet att lägga till företagsegenskap för att tillåta standard för personlig sökning **[!UICONTROL Contains]**.
 
-   I **[!UICONTROL Setup]** > **[!UICONTROL Personal Setup]** grupp > **[!UICONTROL Browser]** rubrik > listruta **[!UICONTROL Basic Search Type]** - **[!UICONTROL Contains]**.
+   I **[!UICONTROL Setup]** > **[!UICONTROL Personal Setup]** grupp > **[!UICONTROL Browser]** heading > **[!UICONTROL Basic Search Type]** nedrullningsbar lista - **[!UICONTROL Contains]**.
 
 <table id="table_69203DAA18F94A0F927BBA00634EBF65"> 
  <thead> 
   <tr> 
-   <th colname="col1" class="entry"> <p>Inställning </p> </th> 
-   <th colname="col2" class="entry"> <p>Beskrivning </p> </th> 
-  </tr> 
+   <th colname="col1" class="entry"> <p>Inställning </p> </th>
+   <th colname="col2" class="entry"> <p>Beskrivning </p> </th>
+  </tr>
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> Innehåller  </span> </p> </td> 
-   <td colname="col2"> <p>Standard. Söker igenom hela strängen efter ett angivet värde. </p> </td> 
-  </tr> 
+   <td colname="col1"> <p> <span class="uicontrol"> Innehåller </span> </p> </td>
+   <td colname="col2"> <p>Standard. Söker igenom hela strängen efter ett angivet värde. </p> </td>
+  </tr>
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> StartsWith  </span> </p> </td> 
-   <td colname="col2"> <p> Söker från början av strängen och returnerar sökresultat snabbare än <span class="uicontrol"> Innehåller </span>. </p> <p>Den åsidosätter standardinställningen som anges i <span class="uicontrol"> Programinställningar </span> &gt; <span class="uicontrol"> Allmänna inställningar </span> grupp &gt; <span class="uicontrol"> Andra inställningar, till Application </span> grupp &gt; <span class="uicontrol"> Standardstandardtyp för grundläggande sökning för nya användare </span> nedrullningsbar lista av administratören. </p> </td> 
-  </tr> 
- </tbody> 
+   <td colname="col1"> <p> <span class="uicontrol"> StartsWith </span> </p> </td>
+   <td colname="col2"> <p> Söker från början av strängen och returnerar sökresultaten snabbare än <span class="uicontrol"> Innehåller </span>. </p> <p>Den åsidosätter standardinställningen som anges i <span class="uicontrol"> Programinställningar </span> &gt; <span class="uicontrol"> Allmänna inställningar </span> grupp &gt; <span class="uicontrol"> Andra inställningar, till program </span> grupp &gt; <span class="uicontrol"> Standardsökningstyp för nya användare </span> nedrullningsbar lista av administratören. </p> </td>
+  </tr>
+ </tbody>
 </table>
 
-I **[!UICONTROL Application Setup]** > **[!UICONTROL General Settings]** grupp > **[!UICONTROL Other Settings, to Application]** grupp > listrutan **[!UICONTROL Default Basic Search Type for New Users]**.
+I **[!UICONTROL Application Setup]** > **[!UICONTROL General Settings]** grupp > **[!UICONTROL Other Settings, to Application]** grupp > **[!UICONTROL Default Basic Search Type for New Users]** nedrullningsbar lista.
 
 <table id="table_A48D69C0F26D43B58C4C890FBF908F8A"> 
  <thead> 
   <tr> 
-   <th colname="col1" class="entry"> <p>Inställning </p> </th> 
-   <th colname="col2" class="entry"> <p>Beskrivning </p> </th> 
-  </tr> 
+   <th colname="col1" class="entry"> <p>Inställning </p> </th>
+   <th colname="col2" class="entry"> <p>Beskrivning </p> </th>
+  </tr>
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> Innehåller  </span> </p> </td> 
-   <td colname="col2"> <p> Söker igenom hela strängen efter ett angivet värde. </p> </td> 
-  </tr> 
+   <td colname="col1"> <p> <span class="uicontrol"> Innehåller </span> </p> </td>
+   <td colname="col2"> <p> Söker igenom hela strängen efter ett angivet värde. </p> </td>
+  </tr>
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> StartsWith  </span> </p> </td> 
-   <td colname="col2"> <p>Söker från början av strängen och returnerar sökresultat snabbare än <span class="uicontrol"> Innehåller </span>. </p> <p>Nya användare kan välja att åsidosätta den här standardinställningen i <span class="uicontrol"> Personliga inställningar </span>. </p> </td> 
-  </tr> 
- </tbody> 
+   <td colname="col1"> <p> <span class="uicontrol"> StartsWith </span> </p> </td>
+   <td colname="col2"> <p>Söker från början av strängen och returnerar sökresultaten snabbare än <span class="uicontrol"> Innehåller </span>. </p> <p>Nya användare kan välja att åsidosätta den här standardinställningen i <span class="uicontrol"> Personliga inställningar </span>. </p> </td>
+  </tr>
+ </tbody>
 </table>
 
-* **Nya inställningar har lagts till i färdiga HTML5 Spin Set Viewers** - In  **[!UICONTROL Setup]** >  **[!UICONTROL Application Setup]** >  **[!UICONTROL Viewers]** >  **[!UICONTROL Viewer Presets]** >  `Universal_HTML5_SpinSet_dark` eller  `Universal_HTML5_SpinSet_light`så har följande tillägg gjorts på varje visares respektive  [!DNL Configure Viewer] sida:
+* **Nya inställningar har lagts till i färdiga visningsprogram för HTML5-snurrsuppsättningen** - in **[!UICONTROL Setup]** > **[!UICONTROL Application Setup]** > **[!UICONTROL Viewers]** > **[!UICONTROL Viewer Presets]** > `Universal_HTML5_SpinSet_dark` eller `Universal_HTML5_SpinSet_light`, har följande tillägg gjorts till varje enskild tittares [!DNL Configure Viewer] sida:
 
 <table id="table_E78C924E34894CD7BE080C0D71500784"> 
  <thead> 
   <tr> 
-   <th colname="col1" class="entry"> <p>Ny inställning </p> </th> 
-   <th colname="col2" class="entry"> <p>Beskrivning </p> </th> 
+   <th colname="col1" class="entry"> <p>Ny inställning </p> </th>
+   <th colname="col2" class="entry"> <p>Beskrivning </p> </th>
   </tr> 
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> Autospin  </span> </p> </td> 
-   <td colname="col2"> <p>Aktiverar eller inaktiverar den automatiska rotationsanimeringen. Standardvärdet är <span class="uicontrol"> Av </span>. Om du anger <span class="uicontrol"> den </span> kan du ange hur länge intervallet ska vara i sekunder för ett helt intervall; standard är <span class="codeph"> 5 </span>. Ställ in rotationsriktningen till höger eller vänster, standard är <span class="uicontrol"> höger </span>. </p> </td> 
-  </tr> 
+   <td colname="col1"> <p> <span class="uicontrol"> Autospin </span> </p> </td> 
+   <td colname="col2"> <p>Aktiverar eller inaktiverar den automatiska rotationsanimeringen. Standard är <span class="uicontrol"> Av </span>. När inställt på <span class="uicontrol"> På </span>Du kan ange hur länge rotation ska vara i sekunder för ett helt intervall. default <span class="codeph"> 5 </span>. Ställ in rotationsriktningen till höger eller vänster, default <span class="uicontrol"> Höger </span>. </p> </td>
+  </tr>
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> Rotationsantal  </span> </p> </td> 
-   <td colname="col2"> <p>Gör att du kan ange <span class="uicontrol">-rotationsantal </span> som är antalet fullständiga rotationer innan autospin stoppas; standard är <span class="codeph"> 1 </span>. </p> <p>Om rotationsantalet anges till <span class="codeph"> -1 </span> resulterar det i en oändlig automatisk rotation. </p> </td> 
-  </tr> 
+   <td colname="col1"> <p> <span class="uicontrol"> Rotationsantal </span> </p> </td> 
+   <td colname="col2"> <p>Här kan du ange <span class="uicontrol"> Rotationsantal </span> som är antalet fullständiga rotationer innan autospin stoppas, default <span class="codeph"> 1 </span>. </p> <p>Ställ in rotationsantalet till <span class="codeph"> -1 </span> resulterar i ett oändligt automatiskt snurra. </p> </td>
+  </tr>
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> Högupplöst förinläsning  </span> </p> </td> 
-   <td colname="col2"> <p>Om du anger <span class="uicontrol"> högupplöst förinläsning </span> till <span class="uicontrol"> På </span> läses det konfigurerade bildruteintervallet in med hög kvalitet. Om du aktiverar den här inställningen kan du öka bandbreddsanvändningen och sidinläsningstiden avsevärt. </p> </td> 
-  </tr> 
- </tbody> 
+   <td colname="col1"> <p> <span class="uicontrol"> Högupplöst förinläsning </span> </p> </td> 
+   <td colname="col2"> <p>Inställning <span class="uicontrol"> Högupplöst förinläsning </span> till <span class="uicontrol"> På </span> läser in det konfigurerade bildruteintervallet med hög kvalitet. Om du aktiverar den här inställningen kan du öka bandbreddsanvändningen och sidinläsningstiden avsevärt. </p> </td>
+  </tr>
+ </tbody>
 </table>
 
-* **Nya inställningar har lagts till i färdiga HTML5 eCatalog Viewer** -visningsprogram - In  **[!UICONTROL Setup]** >  **[!UICONTROL Application Setup]** >  **[!UICONTROL Viewer Presets]** >  `Universal_HTML5_eCatalog` eller  `Universal_HTML5_eCatalog_Adv`har följande tillägg gjorts på varje visares respektive  [!DNL Configure Viewer] sida:
+* **Nya inställningar har lagts till i färdiga HTML5 eCatalog Viewer** - in **[!UICONTROL Setup]** > **[!UICONTROL Application Setup]** > **[!UICONTROL Viewer Presets]** > `Universal_HTML5_eCatalog` eller `Universal_HTML5_eCatalog_Adv`, har följande tillägg gjorts till varje enskild tittares [!DNL Configure Viewer] sida:
 
 <table id="table_65BA9F98D1D041109A44B1C130EF4EFA"> 
  <thead> 
   <tr> 
-   <th colname="col1" class="entry"> <p>Ny inställning </p> </th> 
-   <th colname="col2" class="entry"> <p>Beskrivning </p> </th> 
+   <th colname="col1" class="entry"> <p>Ny inställning </p> </th>
+   <th colname="col2" class="entry"> <p>Beskrivning </p> </th>
   </tr> 
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> Skriv ut  </span> </p> </td> 
-   <td colname="col2"> <p>Fliken innehåller en <span class="uicontrol">-inställning för utskriftskvalitet </span> som gör att du kan ange den maximala bildstorleken som skickas till skrivaren. Standardvärdet är <span class="codeph"> 1000 </span>. </p> </td> 
-  </tr> 
+   <td colname="col1"> <p> <span class="uicontrol"> Skriv ut </span> </p> </td>
+   <td colname="col2"> <p>Fliken innehåller en <span class="uicontrol"> Utskriftskvalitet </span> inställning som gör att du kan ange den maximala storleken på bilden som skickas till skrivaren. Standard är <span class="codeph"> 1000 </span>. </p> </td>
+  </tr>
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> Favoriter  </span> </p> </td> 
-   <td colname="col2"> <p>Fliken innehåller inställningar för <span class="uicontrol"> Förfallotid </span> och <span class="uicontrol"> Favoriter miniatyrstorlek </span> (). </p> <p> 
+   <td colname="col1"> <p> <span class="uicontrol"> Favoriter </span> </p> </td> 
+   <td colname="col2"> <p>Fliken innehåller inställningar för <span class="uicontrol"> Förfallotid </span> och <span class="uicontrol"> Miniatyrstorlek för favoriter </span> (). </p> <p> 
      <ul id="ul_42DA3E946E5445B98B5D8CE668F0139F"> 
-      <li id="li_B4EC8934863347AF8494C64ADBEEC4D6"> <span class="uicontrol"> Förfallotid  </span> - Här kan du ange hur många dagar som favoritsamlingen ska vara kvar i användarens system innan de förfaller. Varje gång användaren besöker e-katalogen och lägger till eller tar bort Favoriter återställs förfallotiden. Standardvärdet är <span class="codeph"> 30 </span> dagar. </li> 
-      <li id="li_D57F9D7ABEB84F819191AD863A5DADCF"> <span class="uicontrol"> Favoriter miniatyrstorlek  </span> - Här kan du ange storleken (  <span class="codeph"> 0-1.0  </span>) för miniatyrbilden som används för Favoriter. <p>Inställningen uttrycks som ett relativt värde till den totala bildrutestorleken. Ett värde på <span class="codeph"> 1.0 </span> innebär till exempel att hela bildrutebilden används som miniatyrbild. Värdet <span class="codeph"> 0.1 </span> (standard) innebär att tio procent av bildrutestorleken används för miniatyrbilden. </p> </li> 
-     </ul> </p> </td> 
-  </tr> 
- </tbody> 
+      <li id="li_B4EC8934863347AF8494C64ADBEEC4D6"> <span class="uicontrol"> Förfallotid </span> - Du kan ange hur många dagar som favoritsamlingen ska sparas i användarens system innan den upphör att gälla. Varje gång användaren besöker e-katalogen och lägger till eller tar bort Favoriter återställs förfallotiden. Standard är <span class="codeph"> 30 </span> dagar. </li>
+      <li id="li_D57F9D7ABEB84F819191AD863A5DADCF"> <span class="uicontrol"> Miniatyrstorlek för favoriter </span> - Ange storleken ( <span class="codeph"> 0-1.0 </span>) av miniatyrbilden som används för Favoriter. <p>Inställningen uttrycks som ett relativt värde till den totala bildrutestorleken. Ett värde på <span class="codeph"> 1.0 </span> betyder att hela bildrutebilden används som miniatyrbild. Värdet för <span class="codeph"> 0.1 </span> (standard) innebär att tio procent av bildrutestorleken används för miniatyrbilden. </p> </li>
+     </ul> </p> </td>
+  </tr>
+ </tbody>
 </table>
 
-* **Nya inställningar har lagts till i färdiga HTML5-visningsprogram för blandad medieuppsättning**  - In  **[!UICONTROL Setup]** >  **[!UICONTROL Application Setup]** >  **[!UICONTROL Viewer Presets]** >  `Universal_HTML5_MixedMedia_dark` eller  `Universal_HTML5_MixedMedia_light`har följande tillägg gjorts på varje  [!DNL Configure Viewer] användarsida:
+* **Nya inställningar har lagts till i färdiga HTML5-visningsprogram för den blandade medieuppsättningen** - in **[!UICONTROL Setup]** > **[!UICONTROL Application Setup]** > **[!UICONTROL Viewer Presets]** > `Universal_HTML5_MixedMedia_dark` eller `Universal_HTML5_MixedMedia_light`, har följande tillägg gjorts till varje enskild tittares [!DNL Configure Viewer] sida:
 
 <table id="table_023203E3CC484F59A350C3C333EF817F"> 
  <thead> 
   <tr> 
-   <th colname="col1" class="entry"> <p>Ny inställning </p> </th> 
-   <th colname="col2" class="entry"> <p>Beskrivning </p> </th> 
-  </tr> 
+   <th colname="col1" class="entry"> <p>Ny inställning </p> </th>
+   <th colname="col2" class="entry"> <p>Beskrivning </p> </th>
+  </tr>
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> Listruta  </span> för zoomläge </p> </td> 
-   <td colname="col2"> <p>Här kan du konfigurera vilken typ av zoomanimering som ska användas. Klicka på <span class="uicontrol"> Viewer Features </span> i den vänstra listen för att komma åt följande <span class="uicontrol"> Zoomläge </span>-alternativ i listrutan: </p> <p> 
+   <td colname="col1"> <p> <span class="uicontrol"> Zoomläge </span> nedrullningsbar lista </p> </td> 
+   <td colname="col2"> <p>Här kan du konfigurera vilken typ av zoomanimering som ska användas. Klicka på <span class="uicontrol"> Visningsfunktioner </span> för att få tillgång till följande <span class="uicontrol"> Zoomläge </span> i listrutan: </p> <p> 
      <ul id="ul_8026EF465A044666A9DBCBFA43F74565"> 
-      <li id="li_816C7D214DE44C488787AF92CEF0BDF9"> <span class="uicontrol"> kontinuerlig  </span> (standard) - användaren måste klicka eller trycka på bilden för att zooma. </li> 
-      <li id="li_C78D3C94C36549B182E1118308BD7326"> <span class="uicontrol"> textbunden  </span> - kör zoomning när muspekaren förs över. </li> 
-      <li id="li_1483A67210E14064B12D785BAE045C6F"> <span class="uicontrol"> auto  </span> - tillämpar automatiskt  <span class="uicontrol"> löpande  </span> på stationära datorer och  <span class="uicontrol"> inline  </span> på pekenheter. </li> 
-     </ul> </p> </td> 
-  </tr> 
+      <li id="li_816C7D214DE44C488787AF92CEF0BDF9"> <span class="uicontrol"> kontinuerlig </span> (standard) - användaren måste klicka eller trycka på bilden för att zooma. </li> 
+      <li id="li_C78D3C94C36549B182E1118308BD7326"> <span class="uicontrol"> inline </span> - kör zoomning vid hovring av musen. </li> 
+      <li id="li_1483A67210E14064B12D785BAE045C6F"> <span class="uicontrol"> auto </span> - gäller automatiskt <span class="uicontrol"> kontinuerlig </span> på stationära datorer och <span class="uicontrol"> inline </span> på pekenheter. </li> 
+     </ul> </p> </td>
+  </tr>
   <tr> 
-   <td colname="col1"> <p> <span class="uicontrol"> Utfällbar/textbunden zoomning,  </span> flik </p> </td> 
-   <td colname="col2"> <p> Klicka på <span class="uicontrol"> Utfällbar/Textbunden zoom </span> till vänster för att få tillgång till följande tillgängliga alternativ: </p> <p> 
+   <td colname="col1"> <p> <span class="uicontrol"> Utfällbar/textbunden zoom </span> tab </p> </td> 
+   <td colname="col2"> <p> Klicka på <span class="uicontrol"> Utfällbar/textbunden zoom </span> för att få tillgång till följande tillgängliga alternativ: </p> <p> 
      <ul id="ul_081A473EFAAC47DD8CF5260492A53C67"> 
-      <li id="li_A672C11207524F8AB7957B6848F4FFF1"> <span class="uicontrol"> Primär zoomfaktor  </span> (standard:  <span class="codeph"> 3  </span>) och  <span class="uicontrol"> sekundär zoomfaktor  </span> (valfritt), standard:  <span class="codeph"> -1  </span>) - Anger bildförstoringen för den utfällbara/textbundna vyn i förhållande till återställningsvyn. Ange ett heltal eller ett flyttal på <span class="codeph"> 1.0 </span> eller större. <p>Du kan ange en valfri sekundär zoomfaktor. Du kan använda den sekundära zoomningen genom att klicka på huvudvyn när högdagern är aktiv. Om du klickar en andra gång återställs den primära zoomfaktorn. Värdet <span class="codeph"> -1 </span> inaktiverar den sekundära zoomfaktorn. </p> </li> 
-      <li id="li_C240206B2E3F4919935C05A253022ED9"> <span class="uicontrol"> Förhandsladda zoombilder  </span> (standard:  <span class="codeph"> Av  </span>) - Inställd på  <span class="uicontrol"> På  </span> (1) för att aktivera förinläsning av den zoomade bilden. anges till  <span class="uicontrol"> Av  </span> (0) för att läsa in zoombilden stegvis efter behov. <p>Om du aktiverar det här alternativet får du betydligt högre bandbreddsanvändning eftersom den zoomade bilden läses in i sin helhet, även om användaren inte gör något för att zooma. </p> </li> 
-      <li id="li_3B9FDD1C82E94E1AB77055B76947F110"> <span class="uicontrol"> Tipstext för skrivbordet  </span> - Här kan du ange texten för ett valfritt tips som visas i visningsprogrammet för datorsystem. </li> 
-      <li id="li_8C709D34A371486EB8C561DE3A2A48B9"> <span class="uicontrol"> Tipstext för mobila enheter  </span> - Ange texten för ett valfritt tips som visas i visningsprogrammet för mobila enheter. </li> 
-      <li id="li_BB51273170054C3A8241F8F3B6856DA0"> <span class="uicontrol"> Varaktighet för tips  </span> (standard:  <span class="codeph"> 3  </span>),  <span class="uicontrol"> Tipsräkning  </span> (standard:  <span class="codeph"> 1  </span>) och  <span class="uicontrol"> Tipstoning  </span> (standard:  <span class="codeph"> 0.3  </span>) - Dessa tre alternativ gör att du kan ange visningsbeteendet för valfri tipstext. <p>Använd <span class="uicontrol"> Tipvaraktighet </span> för att ange hur många sekunder texten ska visas innan den döljs. Om du anger längden till <span class="codeph"> -1 </span> visas tipstexten kontinuerligt, även om användaren aktiverar zoomning. </p> <p>Använd <span class="uicontrol"> Tipantal </span> för att ange hur många gånger texten ska visas när nya bilder visas i uppsättningen. Om du anger att tipsantalet ska vara <span class="codeph"> -1 </span> visas texten kontinuerligt när du visar en bild i uppsättningen. </p> <p> <span class="uicontrol"> Med Tona ut  </span> kan du ange varaktigheten för en tonad animering som inträffar när texten visas eller försvinner. Om du ställer in toningstoning på <span class="codeph"> 0 </span> används ingen toningsövergång. </p> </li> 
-     </ul> </p> </td> 
-  </tr> 
- </tbody> 
+      <li id="li_A672C11207524F8AB7957B6848F4FFF1"> <span class="uicontrol"> Primär zoomfaktor </span> (standard: <span class="codeph"> 3 </span>) och <span class="uicontrol"> Sekundär zoomfaktor </span> (frivilligt) standard: <span class="codeph"> -1 </span>) - Anger bildförstoringen för den utfällbara/textbundna vyn i förhållande till återställningsvyn. Ange ett heltal eller ett flyttalsvärde på <span class="codeph"> 1.0 </span> eller större. <p>Du kan ange en valfri sekundär zoomfaktor. Du kan använda den sekundära zoomningen genom att välja huvudvyn när högdagern är aktiv. Om du väljer en andra gång återställs den primära zoomfaktorn. Värdet för <span class="codeph"> -1 </span> inaktiverar den sekundära zoomfaktorn. </p> </li> 
+      <li id="li_C240206B2E3F4919935C05A253022ED9"> <span class="uicontrol"> Förhandsladda zoombilder </span> (standard: <span class="codeph"> Av </span>) - Ange som <span class="uicontrol"> På </span> 1) för att möjliggöra förinläsning av den zoomade bilden, ange till <span class="uicontrol"> Av </span> (0) om du vill läsa in zoombilden stegvis efter behov. <p>Om du aktiverar det här alternativet får du betydligt högre bandbreddsanvändning eftersom den zoomade bilden läses in i sin helhet, även om användaren inte gör något för att zooma. </p> </li> 
+      <li id="li_3B9FDD1C82E94E1AB77055B76947F110"> <span class="uicontrol"> Tipstext för skrivbordet </span> - Här kan du ange texten för ett valfritt tips som visas i visningsprogrammet för datorer. </li> 
+      <li id="li_8C709D34A371486EB8C561DE3A2A48B9"> <span class="uicontrol"> Tipstext för mobila enheter </span> - Här kan du ange texten för ett valfritt tips som visas i visningsprogrammet för mobila enheter. </li> 
+      <li id="li_BB51273170054C3A8241F8F3B6856DA0"> <span class="uicontrol"> Varaktighet för tips </span> (standard: <span class="codeph"> 3 </span>), <span class="uicontrol"> Antal tips </span> (standard: <span class="codeph"> 1 </span>), och <span class="uicontrol"> Tipstoning </span> (standard: <span class="codeph"> 0,3 </span>) - Dessa tre alternativ gör att du kan ange visningsbeteendet för valfri tipstext. <p>Använd <span class="uicontrol"> Varaktighet för tips </span> om du vill ange antalet sekunder som texten ska visas innan den döljs. Om du anger längden till <span class="codeph"> -1 </span>visas tipstexten kontinuerligt, även om användaren aktiverar zoomning. </p> <p>Använd <span class="uicontrol"> Antal tips </span> om du vill ange hur många gånger texten ska visas när nya bilder i uppsättningen visas. Om du ställer in antalet tips på <span class="codeph"> -1 </span>visas texten kontinuerligt när du visar en bild i uppsättningen. </p> <p> <span class="uicontrol"> Tipstoning </span> Med kan du ange varaktigheten för en tonad animering som inträffar när texten visas eller försvinner. Om du ställer in toning på <span class="codeph"> 0 </span>, används ingen toningsövergång. </p> </li> 
+     </ul> </p> </td>
+  </tr>
+ </tbody>
 </table>
 
 ## Scene7 IPS (Image Production System) 4.5.0 {#section-3e37ed37b6d146419f4578bd7ffeaa74}
@@ -164,33 +164,33 @@ I **[!UICONTROL Application Setup]** > **[!UICONTROL General Settings]** grupp >
 * Nu med JDK 1.8.
 * Stöd för EXIF-orienteringstaggen.
 * Överför katalogfil för temporära FTP-filer (som skapats med ProFTP).
-* Direktpublicering stöds nu för bildåtergivning. Det innebär att dina återgivna vinjettresurser omedelbart är tillgängliga för publicering på webbplatsen, utan att du behöver initiera ett publiceringsjobb. Om du vill använda den här funktionen kontaktar du teknisk support så att de kan aktivera ditt konto för omedelbar publicering.
+* Direktpublicering stöds nu för bildåtergivning. Den här funktionen innebär att dina återgivna vinjettresurser omedelbart är tillgängliga för publicering på webbplatsen, utan att du behöver initiera ett publiceringsjobb. Om du vill använda den här funktionen kontaktar du teknisk support så att de kan aktivera ditt konto för omedelbar publicering.
 
 **Nya konfigurationsparametrar**
 
 <table id="table_8B704CC077304CE2AC3E616D40B64CEF"> 
  <thead> 
   <tr> 
-   <th colname="col1" class="entry"> <p>Parametrar </p> </th> 
-   <th colname="col2" class="entry"> <p>Beskrivning </p> </th> 
+   <th colname="col1" class="entry"> <p>Parametrar </p> </th>
+   <th colname="col2" class="entry"> <p>Beskrivning </p> </th>
   </tr> 
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <span class="codeph"> uploadServer.file.skip.list  </span> </td> 
-   <td colname="col2"> <p> Kommaavgränsad lista med reguljära uttryck som matchar temporära filnamn. Standardvärdet är <span class="codeph"> .in.+ </span> </p> </td> 
+   <td colname="col1"> <span class="codeph"> uploadServer.file.skip.list </span> </td> 
+   <td colname="col2"> <p> Kommaavgränsad lista med reguljära uttryck som matchar temporära filnamn. Standard är <span class="codeph"> .in..+ </span> </p> </td>
   </tr> 
   <tr> 
-   <td colname="col1"> <span class="codeph"> uploadServer.file.skip.remove.timeout  </span> </td> 
-   <td colname="col2"> <p> Tid i sekunder som du vill vänta sedan den senaste filändringen innan du tar bort en tillfällig fil i ett överföringsmappjobb. </p> <p>Värdet <span class="codeph"> &lt;= 0 </span> förhindrar att temporära filer tas bort. Standardvärdet är 3 600. </p> </td> 
+   <td colname="col1"> <span class="codeph"> uploadServer.file.skip.remove.timeout </span> </td> 
+   <td colname="col2"> <p> Tid i sekunder som du vill vänta sedan den senaste filändringen innan du tar bort en tillfällig fil i ett överföringsmappjobb. </p> <p>Värdet för <span class="codeph"> &lt;= 0 </span> förhindrar att tillfälliga filer tas bort. Standardvärdet är 3 600. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <span class="codeph"> autoset.dupcheck.sömn.time  </span> </p> </td> 
-   <td colname="col2"> <p>Standardvärdet är 100. </p> </td> 
+   <td colname="col1"> <p> <span class="codeph"> autoset.dupcheck.sömn.time </span> </p> </td> 
+   <td colname="col2"> <p>Standardvärdet är 100. </p> </td>
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <span class="codeph"> autoset.dupretry.counter  </span> </p> </td> 
-   <td colname="col2"> <p>Standardvärdet är 3. </p> </td> 
+   <td colname="col1"> <p> <span class="codeph"> autoset.dupretry.counter </span> </p> </td> 
+   <td colname="col2"> <p>Standardvärdet är 3. </p> </td>
   </tr> 
  </tbody> 
 </table>
@@ -202,37 +202,37 @@ I **[!UICONTROL Application Setup]** > **[!UICONTROL General Settings]** grupp >
 
 **Felkorrigeringar**
 
-* `<metadataArray>` var tom för filen [!DNL .vtt] som svar på API:t `getAssets`.
+* The `<metadataArray>` var tom för [!DNL .vtt] som svar på API:t `getAssets`.
 
 * Användardatafält saknas för orientering.
-* Svaret från `getJobLogDetails` för ett jobb som uppdaterar en ACO-fil angav inte jobbinformation korrekt.
+* Svar från `getJobLogDetails` för ett jobb som uppdaterar en ACO-fil specificerades inte jobbinformationen korrekt.
 * Den primära PSD-filen loggades som publicerad flera gånger per Image Server.
 * Resurser med ogiltiga tecken i namnet kunde överföras till IPS.
 * Videominiatyrbilder som inte kunde genereras lämnades i tillståndet Väntar i kö.
-* Ansiktsvillkor med mapprestaurering mellan stor överföring av `deleteFolder` och överföring av serverkatalog.
+* Avståndsvillkor med mapprestaurering mellan stor `deleteFolder` och överföring av serverkatalog.
 * PDF-filer loggades som publicerade två gånger per publiceringsserver vid tidig publicering vid överföring.
-* Överföring av flera PSD-filer med samma lagernamn ledde till optimeringsfel.
-* PDFL Rastrering av kund-PDF resulterade i en oväntad vit linje i den genererade bilden.
+* Om du överför flera PSD-filer med samma lagernamn uppstod optimeringsfel.
+* PDFL-rastrering av PDF resulterade i en oväntad vit linje i den genererade bilden.
 * Miniatyrbildsfiler för video publicerades flera gånger vid överföring.
 * Identifiering av duplicerad överföringsfil genererade två överföringsmeddelanden, vilket utlöste den slutförda filredovisningen.
 * Den underordnade XML-filen för videoomkodning loggades som publicerad flera gånger vid uppdatering.
 * moveFolder misslyckades när du tog bort den kapslade mappen och flyttade en annan mapp - som inte finns i den överordnade mappen för den kapslade mappen och har samma namn som den kapslade mappen - till den plats där den kapslade mappen brukade finnas.
 * Konfigurationsposter för klusterstatus i delad och lokal konfiguration rensades inte genom rensning.
 * Ändra API-loggparser för att filtrera efter e-postadressformat.
-* Videobearbetningen matchar inte `Iptc4xmpCore:Location`.
+* Videobearbetningen är inte mappad `Iptc4xmpCore:Location` korrekt.
 * Det fanns ett rymdvillkor mellan rensning och överföring.
-* Publicering använder inte `assetFile`, så staging-publicering fungerar bara för nya resurser.
+* Publiceringen använder inte `assetFile` så att staging publishing bara fungerar för nya resurser.
 * Null-pekaren utlöses när en regeluppsättning uppdateras.
 
 ## Tittare {#section-833ab92c91c941d2bfdc27f233f582ad}
 
 **Nya funktioner, förbättringar och felkorrigeringar för Dynamic Media Image Serving Viewer 5.2.2**
 
-Visningsprogrammets uppgraderingar är bakåtkompatibla - inga ändringar behövs i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i vår staging-miljö. Följande webbplats innehåller instruktioner om hur du kan konfigurera systemet för att få åtkomst till vår mellanlagringsserver:
+Visningsprogrammets uppgraderingar är bakåtkompatibla - inga ändringar behövs i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i Adobe staging-miljö. Följande webbplats innehåller anvisningar om hur du konfigurerar systemet för att få åtkomst till Adobe staging-servern:
 
 [https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
 
-När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. Om du använder färdiga HTML5-visningsprogram är det bästa sättet att testa mot vår standardtestserver och s7is5-preview-staging.scene7.com.
+När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. Om du använder färdiga visningsprogram för HTML5 är det bästa sättet att testa mot Adobe standardstaging-server och s7is5-preview-staging.scene7.com.
 
 Nya funktioner och förbättringar
 
@@ -244,22 +244,22 @@ Se även [Referenshandbok för visningsprogram](https://experienceleague.adobe.c
 * Stöd för IE11 i helskärmsläge har lagts till.
 * Refactored simulated (non-native) full-screen support in Container.
 * Ökade CSS-storleken med liten markör för större telefoner.
-* CSS-storleksmarkörer för visningsprogrammen HTML5 Spin, BasicZoom, Zoom, Spin och MixedMedia har tagits bort i webbläsare för datorer.
+* CSS-storleksmarkörer för visningsprogrammen HTML5 Spin, BasicZoom, Zoom, Spin och MixedMedia har tagits bort i webbläsare för stationära datorer.
 * Stöd har lagts till för kvalitetskonfiguration av förinlästa bildrutor i SpinView.
 * Fast - Galaxy S4, stående läge: Felaktig CSS-storleksmärke användes när helskärmsläge var aktiverat.
-* Korrigerat - [eCatalog]-bildscheman fastnade efter att javascript-mallar använts för extern länkning i Internet Explorer 9.
+* Fast - [eCatalog] bildscheman fastnar när JavaScript-mallar används för extern länkning i Internet Explorer 9.
 * Fixed - Internet Explorer 9 och Internet Explorer 10: zoomningen fungerar inte korrekt om breddegenskapen har definierats för IMG i CSS.
 
 **Nya funktioner, förbättringar och felkorrigeringar för Scene7 HTML5 Viewer SDK 2.9.2**
 
 Allmänt
 
-* Korrigerade ett problem där s7sdk.browser.device.version upptäckte felaktig femte Android.
+* Ett problem har korrigerats där s7sdk.browser.device.version upptäckte felaktig femte Android™.
 * Borttagen synlighetsanvändning:synlig formatering i SDK-komponenter.
 
 FlyoutzoomView
 
-* Fixed - [IE9] Den utfällbara menyn finns ibland kvar på skärmen efter att musen flyttats.
+* Fast - [IE9] Utfällningen finns ibland kvar på skärmen när musen har flyttats bort.
 * Fixed - iscommand-strängen lades till två gånger i den inledande bilden.
 * Ytterligare statushändelser lades till.
 
@@ -270,7 +270,7 @@ PageView
 
 SpinView
 
-* Implementerad automatisk rotation i HTML5.
+* Automatisk rotation i HTML5 har implementerats.
 * Ytterligare statushändelser lades till.
 
 Färgrutor
@@ -301,17 +301,17 @@ ZoomView
 * Publiceringsinställningarna visade inte färgprofiler från Scene7 Shared Assets-företaget.
 * Överför från FTP-skärm: FTP-mappar sorterades inte, men utdata var en sorterad mapplista.
 * Beskrivningen av fliken Behörigheter för tillgångsåtkomst i dialogrutan Redigera grupp i inställningarna för mediaportal har ändrats.
-* Felaktigt formaterad `clientAddressFilter` orsakade ett undantag från katalogservern när publiceringsinställningarna för säker testbildserverpublicering användes.
+* Felaktigt `clientAddressFilter` genererade ett undantag från katalogservern när publiceringsinställningarna för säker testbildserver användes.
 * Kopiera URL för PDF misslyckas i Chrome-webbläsaren när det finns flera på varandra följande blanksteg i URL:en.
 * Inkonsekvent FTP-server- och FTP-kontoinformation i Scene7 Publishing System.
-* Ta bort knappen [!DNL Adobe Marketing Cloud] Länkguide.
+* Borttagning av [!DNL Adobe Experience Cloud] Knappen för länkguiden.
 * MPEG-video kodades, men kunde inte spelas upp.
 * Den dagliga rapporten om bandbredd har brutits efter en s7report-webbtjänsts uppdatering.
 * Start- och slutdatumet angavs felaktigt i den ursprungliga instrumentpanelens domänrapport.
 * Förbättringar av nedladdningen av webb-till-tryck i Scene7 Publishing System.
-* Implementerat konfigurationsanvändargränssnitt för att skapa och uppdatera metadatafält av taggtyp. Stöd för **[!UICONTROL Metadata Field Types]** i parametern `fieldType` inkluderar endast `SingleFixedTag` och `BooleanTag`.
+* Implementerat konfigurationsanvändargränssnitt för att skapa och uppdatera metadatafält av taggtyp. Stöd för **[!UICONTROL Metadata Field Types]** i `fieldType` parameter include `SingleFixedTag` och `BooleanTag` endast.
 
-* Ändrade `@scene7.com` till `@adobe.com` i Skicka e-post från adress.
+* Ändrad `@scene7.com` till `@adobe.com` i Skicka e-post från adress.
 
 * Publiceringstypen Added Image Serving.
 * Video Streaming-data visades inte på grund av felaktiga datum i begärandetexten.
@@ -320,15 +320,15 @@ ZoomView
 * Det finns inget fel med bandbreddsdata för Bandbreddsrapporten trots att data visades.
 * Det aktuella datumet visades i rapporten Bandwidth och Storage i stället för det valda datumet.
 * Meddelandet som visas på välkomstsidan för Scene7 Publishing System har ändrats.
-* Värdet `Userdata` har lagts till i avancerad sökning.
-* Ett fel uppstod när du lade till ett användardefinierat fält ( **[!UICONTROL Setup]** > **Metadata** > **Användardefinierat fält**) av typen `Boolean` och värdet `true` och sedan sparade det.
+* Värdet har lagts till `Userdata` tillbaka till avancerad sökning.
+* Ett fel uppstod när du lade till ett användardefinierat fält ( **[!UICONTROL Setup]** > **Metadata** > **Användardefinierat fält**) av typen `Boolean`och värdet `true`och sparade den sedan.
 
 ## Funktioner som inte längre stöds {#section-9295ea9313c84695b19bca0e0f01a690}
 
-* **Flash Viewers End-of-Life** *NoticeFrån och med den 31 januari 2017 upphörde Adobe Scene7 (nu Dynamic Media Classic) officiellt med stöd för visningsprogramplattformen Flash.*
+* **Flash-visningsprogram - meddelande om att livscykeln upphör** *Från och med den 31 januari 2017 upphörde Adobe Scene7 (nu Dynamic Media Classic) officiellt stödet för visningsprogramplattformen Flash.*
 
 * Påminnelse: Från och med den 31 januari 2014 upphörde Scene7 officiellt stödet för DHTML-visningsprogramplattformen.
-* Scene7 Creative Suite Extensions används inte i den här versionen eftersom Creative Cloud Application har inaktiverat stöd för Flash-panelerna. Ytterligare utveckling av arbetsflöden för innehållskonsumtion fokuserar på Adobe Experience Manager Dynamic Media och Creative Cloud. För Scene7 finns överförings- och exportfunktionerna i Scene7 Publishing System kvar och kan användas i stället.
+* Scene7 Creative Suite Extensions används inte i den här versionen eftersom Creative Cloud Application har inaktiverat stöd för Flash-panelerna. Ytterligare utveckling av arbetsflödena för innehållskonsumtion fokuserar på Adobe Experience Manager Dynamic Media och Creative Cloud. För Scene7 finns överförings- och exportfunktionerna i Scene7 Publishing System kvar och kan användas i stället.
 * UGC-video har tagits bort i den här versionen på grund av låg användning. Om du konfigurerar ett annat Dynamic Media Classic-konto kan det fungera som en ersättningslösning för UGC-video. Kontakta Adobe tekniska support om du vill ha ett annat konto konfigurerat.
 * Textavstavning används inte i den här versionen på grund av begränsad användning. Avstavningsordlistorna definierar hur ord kan delas upp och avstavas för ett optimalt textflöde.
-* Metadata Server och Likhetssökning togs bort 2015 på grund av låg användning. När det officiella måldatumet för borttagning tillkännages kommer berörda kunder att meddelas av Adobe tekniska support.
+* Metadata Server och Likhetssökning togs bort 2015 på grund av låg användning. När det officiella måldatumet för borttagning av gamla kunder annonserades av Adobe Technical Support.
