--- a/help/s7-release-notes/s7rn67.md
+++ b/help/s7-release-notes/s7rn67.md
@@ -1,38 +1,38 @@
 ---
-description: '"Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.7, som ingår i Adobe Experience Manager-lösningen i Adobe Marketing Cloud."'
-solution: Experience Manager
 title: Versionsinformation om Scene7 Publishing System 6.7
+description: '"Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.7, som ingår i Adobe Experience Manager-lösningen i Adobe Experience Cloud."'
+solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 79c7be34-bb31-4581-8919-934fada9410e
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
 workflow-type: tm+mt
-source-wordcount: '544'
+source-wordcount: '537'
 ht-degree: 0%
 
 ---
 
 # Versionsinformation om Scene7 Publishing System 6.7{#scene-publishing-system-release-notes}
 
-Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.7 i Adobe Marketing Cloud.
+Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.7 i Adobe Experience Cloud.
 
 ## VIKTIGT MEDDELANDE: DHTML-VISNINGSPROGRAM - LIVSLÄNGD {#section-58966909d9ec4eacbb6153b83b1642d3}
 
-***Från och med den 31 januari 2014 upphörde Adobe Scene7 (nu Dynamic Media Classic) officiellt med stöd för DHTML-visningsprogramplattformen.***
+***Från och med den 31 januari 2014 upphörde Adobe Scene7 (nu Dynamic Media Classic) officiellt stödet för DHTML-visningsprogramplattformen.***
 
 ## Nya programfunktioner, förbättringar och korrigeringar {#section-30a6201e50b74fc194c08bd732672ac1}
 
 **Resurshantering och publicering**
 
-* Stöd för användargränssnitt har lagts till för aktiveringstid genom programinställningar i **Metadata** > **Användardefinierade fält** för att ange fördröjd leverans av resurser för specifika starter eller försäljningar.
+* Stöd för ytterligare användargränssnitt för aktiveringstid via programinställningar i **Metadata** > **Användardefinierade fält** för att ange fördröjd leverans av resurser för specifika starter eller försäljningar.
 
 <!--   [More information](http://help.adobe.com/en_US/scene7/using/WS08F62297-36A5-4c35-9D4E-5BE38C41D39C.html). -->
 
-* Lagt till möjlighet att automatiskt generera tvåaxelsrotationsuppsättningar vid överföring och under ombearbetning med den nya gruppuppsättningstypen **Spin-uppsättning för flera axlar**.
+* Möjlighet att automatiskt generera tvåaxelsrotationsuppsättningar vid överföring och under ombearbetning med den nya gruppuppsättningstypen **Spin med flera axlar**.
 
 <!--   [More information](http://help.adobe.com/en_US/scene7/using/WSf6ef983f54a76485-20cc30b112624e7b244-7fff.html). -->
 
-**HTML5-visningsprogram SDK**
+**HTML5 Viewers SDK**
 
 <!-- The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download from Adobe Developer Connection.
 
@@ -44,7 +44,7 @@ Den senaste versionsinformationen som beskriver de senaste funktionerna, förbä
    * En EmailShare-komponent har lagts till.
    * En EmbedShare-komponent har lagts till.
    * Komponenten FacebookShare har lagts till.
-   * Komponenten LinkShare har lagts till.
+   * En LinkShare-komponent har lagts till.
    * En SocialShare-komponent har lagts till.
    * TwitterShare-komponent har lagts till.
 
@@ -60,11 +60,11 @@ Den senaste versionsinformationen som beskriver de senaste funktionerna, förbä
 
    Stöd för bildtexter har lagts till.
 
-   Stöd för uppspelning på Blackberry-mobilenheter har lagts till.
+   Stöd för uppspelning på BlackBerry®-mobilenheter har lagts till.
 
 * Videoscrubber
 
-   Stöd för att klicka på navigeringslisten har lagts till.
+   Stöd för val av navigeringslisten har lagts till.
 
 * Zoomvy
 
@@ -73,7 +73,7 @@ Den senaste versionsinformationen som beskriver de senaste funktionerna, förbä
    Borttagen global händelsehanterare: window.onunload.
 
 Förbättringar
-**Körklara HTML5-visningsprogram**
+**Färdiga HTML5-visningsprogram**
 
 * Nya zoomningsvisningsprogram ( `Universal_HTML5_Zoom_dark` och `Universal_HTML5_Zoom_light`)
 * Nya bildgruppsvisningsprogram ( `Universal_HTML5_ImageSet_dark` och `Universal_HTML5_ImageSet_light`)
@@ -98,17 +98,17 @@ Förbättringar
 
 * Förbättrade prestanda vid sökning av metadata i SPS
 
-   I **Personliga inställningar**, i gruppen **Webbläsare**, är alternativet **Inkludera användardefinierat fält (användardefinierade fält) i sökning** nu avmarkerat (av) som standard för alla användarkonton för att förbättra systemprestanda för de flesta metadatasökningar som du kör.
+   I **[!UICONTROL Personal Setup]**, i **[!UICONTROL Browser]** grupp, alternativet **[!UICONTROL Include UDF's (User-Defined Fields) in Search]** är nu avmarkerat (av) som standard för alla användarkonton. Genom att ange att alternativet ska vara inaktiverat förbättras systemets prestanda för de flesta metadatasökningar som du kör.
 
 <!--   [Personal Setup](http://help.adobe.com/en_US/scene7/using/WSCAAE9C8A-F172-43a8-B134-6163E7C80218.html). -->
 
-Om de flesta av dina metadatasökningar har nytta av att inkludera användardefinierade fält kan du välja det här alternativet för att aktivera det. Alternativt kan du använda **Avancerad sökning** för en mer riktad och snabbare sökning än att inkludera alla användardefinierade fält.
+Om de flesta av dina metadatasökningar har nytta av att inkludera användardefinierade fält kan du välja det här alternativet för att aktivera det. Alternativt kan du använda **Avancerad sökning** för att möjliggöra en mer riktad och snabbare sökning än att inkludera alla användardefinierade fält.
 
 <!--   [Advanced search](http://help.adobe.com/en_US/scene7/using/WS259993e42159a215-1c6a66df1265272619e-7ff5.html). -->
 
 **eVideo**
 
-* Stöd för undertextning har lagts till i det nya visningsprogrammet **Universal_HTML5_Video_Social** via WebVTT-filer.
+* Stöd för undertexter har lagts till i nya **Universal_HTML5_Video_Social** visningsprogram via WebVTT-filer.
 
 <!--   [Adding captions to eVideo](http://help.stage.adobe.com/en_US/scene7/using/WS98ca2e6790647c06-6f6f53e137b959f094-8000.html). -->
 
@@ -116,7 +116,7 @@ Om de flesta av dina metadatasökningar har nytta av att inkludera användardefi
 
    Tidigare lades den primära MP4- eller F4V-källfilen automatiskt till i den systemgenererade adaptiva videouppsättningen. Därför kan dessa stora primära källfiler ibland orsaka videouppspelningsproblem. När du nu använder en serie kodningsförinställningar på den primära videon kan du förvänta dig att se en adaptiv videouppsättning utan den primära källfilen.
 
-* Ny **adaptiv videokodning (16:9 eller 4:3)**.
+* Nytt **Adaptiv videokodning (16:9 eller 4:3)**.
 
    Det här nya alternativet kombinerar alla fem förinställningar för 16:9 Adaptiv videokodning och alla fem förinställningar för adaptiv videokodning, 4:3, i en enda lista med primära kodningsförinställningar. När du överför videon med det här nya alternativet används automatiskt rätt kodningsförinställningar för att matcha källvideons proportioner. (Den här inställningen ersatte tidigare kodningsförinställningar för adaptiv video.)
 
